/* Verb */ remove unnecessary direct object <bleed#32565941>

--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -13,7 +13,7 @@ From {{etyl|enm|en}} {{m|enm|bleden}}, from {{etyl|ang|en}} {{m|ang|blēdan||to 
 
 # {{context|intransitive|of an animal|lang=en}} To [[lose]] [[blood]] through an [[injured]] [[blood vessel]].
 #: ''If her nose '''bleeds''' try to use ice.''
-# {{context|transitive|lang=en}} To [[let]] or [[draw]] [[blood]] from an animal.
+# {{context|transitive|lang=en}} To [[let]] or [[draw]] [[blood]] from.
 # {{context|transitive|lang=en}} To [[take]] large amounts of [[money]] from.
 # {{context|transitive|lang=en}} To steadily lose (something vital).
 #: ''The company was '''bleeding''' talent.''
@@ -21,7 +21,7 @@ From {{etyl|enm|en}} {{m|enm|bleden}}, from {{etyl|ang|en}} {{m|ang|blēdan||to 
 # {{context|transitive|lang=en}} To [[remove]] [[air]] bubbles from a [[pipe]] containing [[fluid]]s.
 # {{context|obsolete|transitive|lang=en}} To bleed on; to make bloody.
 <!--Prior quote:#*{{RQ:Mlry MrtArthr1|VIII}}:
-#*:And so Sir Trystrames '''bledde''' bothe the over-shete and the neyther-shete, and the pylowes and the hede-shete.-->
+#*: And so Sir Trystrames '''bledde''' bothe the over-shete and the neyther-shete, and the pylowes and the hede-shete.-->
 #* {{RQ:Mlry MrtDrthr|10.14|2|VIII|xiv}}:
 #*: And soo they souped lyghtely and wente to bedde with grete ioye and plesaunce / and soo in his ragyng he took no kepe of his grene wound that kynge Marke had gyuen hym / And soo syr Tristram '''bebled''' both the ouer shete and the nether & pelowes / and hede shete
 # {{context|intransitive|copulative|lang=en}} To show one's group loyalty by showing (its associated color) in one's blood.
