--- a/en/m/maximum.34063.wikitext
+++ b/en/m/maximum.34063.wikitext
@@ -67,6 +67,7 @@ Via {{etyl|fr|en}} from {{etyl|la|en}} ''[[#Latin|maximum]]''.
 {{trans-mid}}
 * Italian: {{t+|it|massimo|m}}
 * Persian: {{t+|fa|بیشینه|tr=bišine|sc=fa-Arab}}, {{t+|fa|ماکسیمم|tr=mâksimom|sc=fa-Arab}}
+* Portuguese: {{t+|pt|máximo|m}}
 * Russian: {{t+|ru|максимум|m|tr=máksimum}}
 * Spanish: {{t+|es|máximo}}
 * Telugu: {{t|te|గరిష్ఠం|tr=garishThaM}}
