--- a/en/g/gagaku.801689.wikitext
+++ b/en/g/gagaku.801689.wikitext
@@ -1,5 +1,6 @@
 ==English==
-{{wikipedia|Gagaku}}
+{{wikipedia}}
+
 ===Etymology===
 From {{etyl|ja|en}} 雅楽 (ががく ''gagaku''), from {{etyl|ltc|en}} 雅樂 (''ngǽ-ngæwk'' "ancient ceremonial music") (compare {{etyl|cmn|-}}  [[雅乐|''yǎyuè'' 雅乐]], Cantonese ''ngaa<sup>5</sup>-ngok<sup>6</sup>'' 雅樂), from {{etyl|och|en}} 雅樂 (''*ŋˁraʔ-ŋˁrawk'' "courtly, ceremonial music"), from [[雅]] ("elegant", "refined") + [[樂]] ("music").
 
