t+pt:[[acoplar]] ([[WT:EDIT|Assisted]]) <bind#32573670>

--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -114,6 +114,7 @@ From {{etyl|enm|en}} {{m|enm|binden}}, from {{etyl|ang|en}} {{m|en|bindan}}, fro
 *: Ancient: {{t|grc|δέω|sc=polytonic}}
 {{trans-mid}}
 * Italian: {{t|it|connettere}}
+* Portuguese: {{t+|pt|acoplar}}
 * Russian: {{t+|ru|вяза́ть|impf}}, {{t+|ru|свя́зывать|impf}}, {{t+|ru|связа́ть|pf}}
 * Swedish: {{t+|sv|koppla}}
 * Turkish: {{t+|tr|birleştirmek}}
