t+pt:[[apostar]] ([[WT:EDIT|Assisted]]) <bet#32574514>

--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -133,6 +133,7 @@ From 16th century criminal slang, likely from {{term|abet|lang=en}} or {{etyl|an
 {{trans-mid}}
 * Norwegian: {{t|no|vedde på}}
 * Polish: {{t|pl|stawiać na}}
+* Portuguese: {{t+|pt|apostar}}
 * Russian: {{t|ru|быть уверенным}}
 * Slovak: {{t|sk|staviť}} sa
 * Spanish: {{t+|es|apostar}}
