--- a/en/c/countdown.34096.wikitext
+++ b/en/c/countdown.34096.wikitext
@@ -29,6 +29,7 @@
 * Greek: {{t+|el|αντίστροφη μέτρηση|f|sc=Grek}}
 * Hebrew: {{t|he|ספירה לאחור|f|tr=sfira le'akhor|sc=Hebr}}
 {{trans-mid}}
+* Hungarian: {{t|hu|visszaszámolás}}
 * Italian: {{t|it|conto alla rovescia|m}}
 * Japanese: {{t|ja|カウントダウン|tr=kauntodaun|sc=Jpan}}
 * Macedonian: {{t|mk|одбројување|n|tr=odbrojúvanje|sc=Cyrl}}
