/* English */ # {{cx|Ireland|historical|lang=en}} One of a [[gang]] who engaged in [[agrarian]] [[outrage]]s by night. <moonlighter#32619471>

--- a/en/m/moonlighter.720229.wikitext
+++ b/en/m/moonlighter.720229.wikitext
@@ -5,7 +5,8 @@
 
 # A person who [[moonlight]]s, or works a second job on the side.
 # {{cx|US|regional|lang=en}} One who [[serenade]]s by moonlight.
-# A [[moonshiner]].
+# A [[moonshiner]], who makes illicit alcohol.
+# {{cx|Ireland|historical|lang=en}} One of a [[gang]] who engaged in [[agrarian]] [[outrage]]s by night.
 
 ====Translations====
 {{trans-top|person who works a second job}}
