/* Wolof */ Added IPA <bind#32620742>

--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -254,6 +254,7 @@ From the verb {{term|binde|lang=nn}}
 ==Wolof==
 
 ===Pronunciation===
+* {{IPA|/bind/|lang=wo}}
 * {{audio|Wo-bind.ogg|Audio|lang=wo}}
 
 ===Verb===
