--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -260,9 +260,8 @@ From the verb {{term|binde|lang=nn}}
 ===Verb===
 {{head|wo|verb}}
 
-# to write
-#: Jàngalekat jaa ngiy bind.
-#: The teacher (here) is writing.
+# [[to]] [[write]]
+#: ''Jàngalekat jaa ngiy bind.'' - The teacher (here) is writing.
 
 [[ca:bind]]
 [[cs:bind]]
