--- a/en/c/Camelus dromedarius.34060.wikitext
+++ b/en/c/Camelus dromedarius.34060.wikitext
@@ -1,5 +1,5 @@
 ==Translingual==
-{{rfimage}}
+[[File:07. Camel Profile, near Silverton, NSW, 07.07.2007.jpg|thumb|''Camelus dromedarius'']]
 {{wikipedia}}
 {{wikispecies}}
 ===Proper noun===
