--- a/en/m/maximum.34063.wikitext
+++ b/en/m/maximum.34063.wikitext
@@ -71,6 +71,7 @@ Via {{etyl|fr|en}} from {{etyl|la|en}} ''[[#Latin|maximum]]''.
 * Russian: {{t+|ru|максимум|m|tr=máksimum}}
 * Spanish: {{t+|es|máximo}}
 * Telugu: {{t|te|గరిష్ఠం|tr=garishThaM}}
+* Vietnamese: {{t|vi|cực trị}}
 {{trans-bottom}}
 
 {{trans-top|statistics: largest value of a batch}}
@@ -102,6 +103,7 @@ Via {{etyl|fr|en}} from {{etyl|la|en}} ''[[#Latin|maximum]]''.
 * Spanish: {{t+|es|máximo}}
 * Telugu: {{t|te|గరిష్ఠ|tr=garishTha}}
 * Turkish: {{t+|tr|maksimum}}
+* Vietnamese: {{t+|vi|tối đa}}
 {{trans-bottom}}
 
 ===Derived terms===
