--- a/en/m/multi.34076.wikitext
+++ b/en/m/multi.34076.wikitext
@@ -1,13 +1,26 @@
 {{also|multi-|mulți}}
 ==English==
-===Etymology===
+
+===Etymology 1===
 Shortening of {{m|en|multituberculate}}.
-===Noun===
+
+====Noun====
 {{en-noun}}
 
 # {{lb|en|informal|paleontology}} A [[multituberculate]].
 #*'''1996''', Michael Novacek, ''Dinosaurs of the Flaming Cliffs'', p. 316:
 #*:Our Mesozoic antecedents are typified by small size; even the largest of the '''multis''' are not larger than a groundhog.
+
+===Etymology 2===
+< ''multifasciatus''
+
+====Noun====
+{{en-noun}}
+
+# {{label|en|informal}} {{w|Neolamprologus multifasciatus}} {{gloss|small shell-dwelling [[cichlid]] endemic to Lake Tanganyika, popular as aquarium fish}}
+
+[[Category:en:Fish]]
+
 ----
 
 ==Esperanto==
