--- a/en/u/ulterior motive.802595.wikitext
+++ b/en/u/ulterior motive.802595.wikitext
@@ -27,6 +27,7 @@
 * Finnish: {{t+|fi|taka-ajatus}}
 * French: [[motif]] [[secret]] {{g|m}}, {{t+|fr|arrière-pensée|f}}
 * German: {{t+|de|Hintergedanke|m}}
+* Hungarian: {{t|hu|hátsó szándék}}
 * Japanese: {{t|ja|下心|tr=したごころ, shitagokoro|sc=Jpan}}, {{t|ja|他心|tr=たしん, tashin|sc=Jpan}}, {{t|ja|他意|tr=たい, tai|sc=Jpan}}
 {{trans-mid}}
 * Korean: {{t|ko|배후목적|tr=baehu mokjeog|sc=Kore}}
