--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -9,11 +9,11 @@
 From {{etyl|frm|en}} {{term|advertissement||statement calling attention|lang=frm}}, compare French {{term|avertissement||warning|lang=fr}}. See [[advertise]].
 
 ===Pronunciation===
-* {{a|NZ}} {{IPA|/ˈædvəˌtʌɪzmənt/|/ədˈvɜːtɪsmənt/|lang=en}}
-* {{a|UK}} {{IPA|/ədˈvɜːtɪsmənt/|lang=en}} (occasionally {{IPAchar|/ad.və.ˈtʌɪz.mənt/|lang=en}}/ in some regions)
+* {{a|UK}} {{IPA|/ədˈvɜːtɪsmənt/|lang=en}} (occasionally {{IPAchar|/ˈædvətaɪzmənt/|lang=en}} in some regions)
 * {{audio|Advertisement.ogg|Audio (UK)|lang=en}}
 * {{a|US}} {{IPA|/ədˈvɝtɪzmənt/|lang=en}}, rarely {{IPAchar|/ˈædvɚˌtaɪzmənt/|lang=en}}
 * {{audio|en-us-advertisement.ogg|Audio (US)|lang=en}}
+* {{a|NZ}} {{IPA|/ˈædvəˌtʌɪzmənt/|/ədˈvɜːtɪsmənt/|lang=en}}
 * {{hyphenation|ad|ver|tise|ment|lang=en}}
 
 ===Noun===
