--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -9,7 +9,7 @@
 From {{etyl|frm|en}} {{term|advertissement||statement calling attention|lang=frm}}, compare French {{term|avertissement||warning|lang=fr}}. See [[advertise]].
 
 ===Pronunciation===
-* {{a|UK}} {{IPA|/ədˈvɜːtɪsmənt/|lang=en}} (occasionally {{IPAchar|/ˈædvətaɪzmənt/|lang=en}} in some regions)
+* {{a|UK}} {{IPA|/ədˈvɜːtɪsmənt/|lang=en}}, occasionally {{IPAchar|/ˈædvətaɪzmənt/|lang=en}}
 * {{audio|Advertisement.ogg|Audio (UK)|lang=en}}
 * {{a|US}} {{IPA|/ədˈvɝtɪzmənt/|lang=en}}, rarely {{IPAchar|/ˈædvɚˌtaɪzmənt/|lang=en}}
 * {{audio|en-us-advertisement.ogg|Audio (US)|lang=en}}
