t+el:[[ανθοκράμβη]] ([[WT:EDIT|Assisted]]) <cauliflower#32736779>

--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -46,7 +46,7 @@ From 16th century {{term|cole-florye|lang=en}}. Compare Latin {{term|caulis|lang
 * French: {{t+|fr|chou-fleur|m}}
 * Georgian: {{t|ka|კალბანი|sc=Geor}}, {{t|ka|ყვავილოვანი კომბოსტო|sc=Geor}}
 * German: {{t+|de|Blumenkohl|m}}, {{qualifier|Austria}} {{t+|de|Karfiol|m}}
-* Greek: {{t+|el|κουνουπίδι|n}}
+* Greek: {{t+|el|κουνουπίδι|n}}, {{t+|el|ανθοκράμβη|f|sc=Grek}}
 * Greenlandic: {{t|kl|blomkåli}}
 * Hungarian: {{t+|hu|karfiol}}
 * Icelandic: {{t+|is|blómkál|n}}
