/* Derived terms */ <bet#32752025>

--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -78,8 +78,10 @@ From 16th century criminal slang, likely from {{term|abet|lang=en}} or {{etyl|an
 
 =====Derived terms=====
 {{rel-top3|Terms derived from ''bet'' (verb)}}
-* [[bet one's boots]]
+* [[bet a dollar to a dime]]
+* [[bet a dollar to a doughnut]]
 {{rel-mid3}}
+* [[bet one's boots]]
 * [[bet one's bottom dollar]]
 {{rel-mid3}}
 * [[bet the farm]]
