t+wym:[[wyspułn]] ([[WT:EDIT|Assisted]]) <whistle#32755955>

--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -264,6 +264,7 @@ From {{etyl|enm|en}} {{term|whistlen|lang=enm}}; {{etyl|ang|en}} {{term|hwistlan
 * Swedish: {{t+|sv|vissla}}
 * Ukrainian: {{t|uk|свисті́ти|impf|sc=Cyrl}}, {{t|uk|сюрча́ти|impf|sc=Cyrl}}
 * Vietnamese: {{t+|vi|huýt}}
+* Vilamovian: {{t|wym|wyspułn}}
 {{trans-bottom}}
 
 {{trans-top|to move is such a way as to make a whistling sound}}
