<fend for oneself#32760175>

--- a/en/f/fend for oneself.742280.wikitext
+++ b/en/f/fend for oneself.742280.wikitext
@@ -4,6 +4,8 @@
 {{en-verb|fends for oneself|fending for oneself|fended for oneself|fended for oneself}}
 
 # To [[take care]] of oneself without help.
+#* '''2012''', Christoper Zara, ''Tortured Artists: From Picasso and Monroe to Warhol and Winehouse, the Twisted Secrets of the World's Most Creative Minds'', part 1, chapter 1, {{gbooks|q=fend-for-themselves|id=HV4jKhjzMVYC|pg=26}}:
+#*: Clara's father, a trollish ne'er-do-well who spent most of his time in brothels and saloons, would disappear for days and weeks at a stretch, leaving Clara and her mother to '''fend for themselves'''.
 #:''After her mother passed away, she had to learn to '''fend for herself'''.''
 
 [[ml:fend for oneself]]
