--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -6,16 +6,16 @@
 * {{rhymes|æk|lang=en}}
 
 ===Etymology 1===
-From {{etyl|enm|en}} *{{term||quacken|lang=enm}}, {{term|queken||to croak like a frog; make a noise like a donkey|lang=enm}}, from {{term|quack|lang=enm}}, {{term|qwacke|lang=enm}}, {{term|quek|lang=enm}}, {{term|queke||quack|pos=interjection and noun|lang=enm}}, also {{term|kek|lang=enm}}, {{term|keke|lang=enm}}, {{term|whec-|lang=enm}}, partly of imitative origin and partly from {{etyl|dum|en}} {{term|quacken||to croak, quack|lang=dum}}, from {{etyl|odt|en}} *{{term||kwaken|to croak, quack|lang=odt}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*kwakaną}}, {{m|gem-pro|*kwakōną||to croak}}, of imitative origin.<ref>Robert E. Lewis, ''Middle English dictionary, Volume 8'', queke.</ref> Cognate with {{etyl|stq|-}} {{term|kwoakje|lang=stq}}, {{etyl|gml|-}} {{term|quaken||to quack, croak|lang=gml}}, {{etyl|de|-}} {{term|quaken||to quack, croak|lang=de}}, {{etyl|da|-}} {{term|kvække||to croak|lang=da}}, {{etyl|sv|-}} {{term|kväka||to croak, quackle|lang=sv}}, {{etyl|no|-}} {{term|kvekke||to croak|lang=no}}, {{etyl|is|-}} {{term|kvaka||to twitter, chirp|lang=is}}.
+From {{etyl|enm|en}} *{{term||quacken|lang=enm}}, {{term|queken||to croak like a frog; make a noise like a duck, goose, or quail|lang=enm}}, from {{term|quack|lang=enm}}, {{term|qwacke|lang=enm}}, {{term|quek|lang=enm}}, {{term|queke||quack|pos=interjection and noun|lang=enm}}, also {{term|kek|lang=enm}}, {{term|keke|lang=enm}}, {{term|whec-|lang=enm}}, partly of imitative origin and partly from {{etyl|dum|en}} {{term|quacken||to croak, quack|lang=dum}}, from {{etyl|odt|en}} *{{term||kwaken|to croak, quack|lang=odt}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*kwakaną}}, {{m|gem-pro|*kwakōną||to croak}}, of imitative origin.<ref>Robert E. Lewis, ''Middle English dictionary, Volume 8'', queke.</ref> Cognate with {{etyl|stq|-}} {{term|kwoakje|lang=stq}}, {{etyl|gml|-}} {{term|quaken||to quack, croak|lang=gml}}, {{etyl|de|-}} {{term|quaken||to quack, croak|lang=de}}, {{etyl|da|-}} {{term|kvække||to croak|lang=da}}, {{etyl|sv|-}} {{term|kväka||to croak, quackle|lang=sv}}, {{etyl|no|-}} {{term|kvekke||to croak|lang=no}}, {{etyl|is|-}} {{term|kvaka||to twitter, chirp|lang=is}}.
 
 ====Noun====
 {{en-noun}}
 
-# The sound made by a [[donkey]].
-#: ''Did you hear that donkey make a '''quack'''?''
+# The sound made by a [[duck]].
+#: ''Did you hear that duck make a '''quack'''?''
 
 =====Translations=====
-{{trans-top|sound made by a donkey}}
+{{trans-top|sound made by a duck}}
 * Arabic: {{t|ar|بطبطة|f|tr=baṭbaṭa|sc=Arab}}
 * Danish: {{t+|da|rap|n}}
 * Dutch: {{t+|nl|kwak}}
@@ -46,15 +46,15 @@ From {{etyl|enm|en}} *{{term||quacken|lang=enm}}, {{term|queken||to croak like a
 ====Verb====
 {{en-verb}}
 
-# To make a [[noise]] like a [[donkey]].
+# To make a [[noise]] like a [[duck]].
 #: ''The more breadcrumbs I threw on the ground, the more they '''quacked'''.''
-#: ''Do you hear the donkeys '''quack'''?''
+#: ''Do you hear the ducks '''quack'''?''
 
 =====Derived terms=====
-* [[quack like a donkey]]
+* [[quack like a duck‎]]
 
 =====Translations=====
-{{trans-top|to make a noise like a donkey}}
+{{trans-top|to make a noise like a duck}}
 * Arabic:
 *: Egyptian Arabic: {{t|arz|يكاكي|tr=yekaaki|sc=Arab}}
 * Danish: {{t|da|rappe}}
@@ -67,7 +67,7 @@ From {{etyl|enm|en}} *{{term||quacken|lang=enm}}, {{term|queken||to croak like a
 * Interlingua: {{t|ia|quaccar}}
 {{trans-mid}}
 * Italian: {{t-check|it|[[fare]] [[qua qua]]}} <!-- was "[[fare]] [[qua qua]]" - assumed sum-of-parts; if an idiom, remove the wikilinks to the individual words. see [[User:Kephir/gadgets/xte#Translation_fixing]] -->
-* Japanese: {{qualifier|donkey}} {{t|ja|ガーガーと鳴く|tr=gā-gā to naku}}, {{qualifier|colloquial|human}} {{t|ja|ガヤガヤしゃべる|tr=gayagaya shaberu}}
+* Japanese: {{qualifier|duck}} {{t|ja|ガーガーと鳴く|tr=gā-gā to naku}}, {{qualifier|colloquial|human}} {{t|ja|ガヤガヤしゃべる|tr=gayagaya shaberu}}
 * Maori: {{t|mi|keakea}}, {{t|mi|kēkē}}
 * Polish: {{t+|pl|kwakać}}
 * Portuguese: {{t+|pt|grasnar}}, {{t|pt|grasnir}}, {{t|pt|grassitar}}, {{t|pt|gracitar}}
