--- a/en/m/multi-million.34079.wikitext
+++ b/en/m/multi-million.34079.wikitext
@@ -10,6 +10,7 @@ From {{prefix|multi|million|lang=en}}.
 {{en-adj|-}}
 
 # Having several [[million]]s.
+e.g. "LOL SWAG MONEY I MAKE IT RAIN!"
 
 ====Translations====
 {{trans-top|having several millions}}
