--- a/en/m/multi-million.34079.wikitext
+++ b/en/m/multi-million.34079.wikitext
@@ -1,10 +1,7 @@
 ==English==
 
 ===Pronunciation===
-OHHHH! THEY CAL ME HUMPTEY DUMPTEY 
-QUICKSCOPE PINGU
-1 LIKE = 1 KITKAT 
-OHH 360 LATERAL G SHOCK SPIN WOAHEH SIOGHRGHOSDHU
+* {{a|US}} {{IPA|/ˌmʌltiˈmɪljən/|/ˌmʌltaɪˈmɪljən/|lang=en}}
 
 ===Etymology===
 From {{prefix|multi|million|lang=en}}.
@@ -13,7 +10,6 @@ From {{prefix|multi|million|lang=en}}.
 {{en-adj|-}}
 
 # Having several [[million]]s.
-e.g. "LOL SWAG MONEY I MAKE IT RAIN!"
 
 ====Translations====
 {{trans-top|having several millions}}
