--- a/en/m/marten.8230.wikitext
+++ b/en/m/marten.8230.wikitext
@@ -5,7 +5,7 @@
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|/ˈmɑː(ɹ).tɪn/|/ˈmɑː(ɹ).tən/|lang=en}}
-* {{a|US}} {{IPA|/ˈmɑtən/|lang=en}}
+* {{a|US}} {{IPA|/ˈmɑɹtən/|lang=en}}
 * {{audio|En-us-marten.ogg|Audio (US)|lang=en}}
 * {{hyphenation|mar|ten|lang=en}}
 * {{rhymes|ɑː(ɹ)tɪn|lang=en}}
