--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -104,7 +104,7 @@ From {{etyl|enm|en}} {{term|thaugh|lang=enm}}, {{term|thagh||lang=enm}}, from {{
 * Russian: {{t+|ru|хотя}}, {{t+|ru|хоть и}}, {{t|ru|несмотря на то, что}}
 * Slovak: {{t|sk|hoci}}
 * Spanish: {{t+|es|sin embargo}}, {{t|es|a pesar de}}
-* Swedish: {{t|sv|även om}}
+* Swedish: {{t|sv|även om}}, {{t+|sv|fast}}, {{t+|sv|fastän}}
 {{trans-bottom}}
 
 ===Statistics===
