--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -245,7 +245,7 @@ From {{etyl|enm|en}} {{term|whistlen|lang=enm}}; {{etyl|ang|en}} {{term|hwistlan
 * Khmer: {{t+|km|ហួច|tr=houch|sc=Khmr}}
 * Korean: {{t|ko|[[휘파람]][[을]] [[불다]]|sc=Kore}}
 * Latvian: {{t+|lv|svilpt}}
-* Macedonian: {{t+|mk|&lt;strong class="error"&gt;&lt;span class="scribunto-error" id="mw-scribunto-error-1"&gt;Lua error in Module:languages/templates at line 28: The language code 'nk' is not valid.&lt;/span&gt;&lt;/strong&gt|impf|alt=свири|sc=Cyrl}}, {{t|mk|свирка|impf|sc=Cyrl}}
+* Macedonian: {{t+|mk|свири|impf|sc=Cyrl}}, {{t|mk|свирка|impf|sc=Cyrl}}
 * Occitan: {{t+|oc|siblar}}, {{t+|oc|fiular}}
 * Polish: {{t+|pl|gwizdać|impf}}, {{t|pl|świstać|impf}}
 * Portuguese: {{t+|pt|assobiar}} {{qualifier|with one’s mouth}}, {{t+|pt|assoviar}} {{qualifier|with one’s mouth}}, {{t|pt|apitar}} {{qualifier|with a whistle}}
