t+ko:[[구부리다]] t-balance t+uk:[[згинати]] t+uk:[[гнути]] t+be:[[згінаць]] t+be:[[гнуць]] ([[WT:EDIT|Assisted]]) <bend#32780474>

--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -72,6 +72,7 @@ From {{etyl|enm|en}} {{term|benden|lang=enm}}, from {{etyl|ang|en}} {{term|benda
 ====Translations====
 {{trans-top|to cause to shape into a curve}}
 * Arabic: {{t|ar|ثنى|tr=thanaa}}
+* Belarusian: {{t|be|згіна́ць|impf|sc=Cyrl}}, {{t|be|гнуць|impf|sc=Cyrl}}
 * Bulgarian: {{t+|bg|извивам}}, {{t+|bg|превивам}}
 * Chinese:
 *: Mandarin: {{t+check|cmn|屈|tr=qū|sc=Hani}}, {{t+check|cmn|曲|tr=qū|sc=Hani}}, {{zh-tsp|彎|弯|wān}}
@@ -87,9 +88,10 @@ From {{etyl|enm|en}} {{term|benden|lang=enm}}, from {{etyl|ang|en}} {{term|benda
 * Icelandic: {{t+|is|beygja}}
 * Italian: {{t+|it|curvare}}, {{t+|it|piegare}}
 * Japanese: {{t|ja|曲げる|tr=mageru}}
-{{trans-mid}}
+* Korean: {{t+|ko|구부리다|sc=Kore}}
 * Kurdish:
 *: Sorani: {{t|ku|چه‌ماندن}}
+{{trans-mid}}
 * Latin: {{t|la|flecto}}, {{t|la|sinuō}}, {{t|la|curvo}}
 * Latvian: {{t|lv|saliekt}}
 * Maori: {{t|mi|ngawaki}} {{qualifier|refers to knees}}, {{t|mi|whakapiko}}, {{t|mi|whatiwhati}} {{qualifier|Refers to bending the legs when running}}
@@ -106,6 +108,7 @@ From {{etyl|enm|en}} {{term|benden|lang=enm}}, from {{etyl|ang|en}} {{term|benda
 * Swahili: {{t+|sw|pinda}}, {{t+|sw|kunja}}
 * Swedish: {{t+|sv|böja}}
 * Turkish: {{t+|tr|bükmek}}
+* Ukrainian: {{t|uk|згина́ти|impf|sc=Cyrl}}, {{t|uk|гну́ти|impf|sc=Cyrl}}
 * Vietnamese: {{t+|vi|uốn cong}}
 * Walloon: {{t+|wa|ployî}}
 {{trans-bottom}}
