--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -8,7 +8,7 @@
 * {{rhymes|ɪd|lang=en}}
 
 ===Etymology 1===
-From {{etyl|enm|en}} {{term|bidden|lang=enm}}, from the {{etyl|ang|en}} verb {{term|biddan||ask, demandlang=ang}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*bidjaną||to ask}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*gʷʰedʰ-}}. Conflated with the {{etyl|ang|en}} verb {{m|ang|bēodan||offer, announce}} (see Etymology 2 below). Compare West Frisian {{term|bidde|lang=fy}}, Low German {{term|bidden|lang=nds}}, Dutch {{term|bidden|lang=nl}}, German {{term|bitten|lang=de}}, Danish {{term|bede|lang=da}}.
+From {{etyl|enm|en}} {{term|bidden|lang=enm}}, from the {{etyl|ang|en}} verb {{term|biddan||ask, demand|lang=ang}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*bidjaną||to ask}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*gʷʰedʰ-}}. Conflated with the {{etyl|ang|en}} verb {{m|ang|bēodan||offer, announce}} (see Etymology 2 below). Compare West Frisian {{term|bidde|lang=fy}}, Low German {{term|bidden|lang=nds}}, Dutch {{term|bidden|lang=nl}}, German {{term|bitten|lang=de}}, Danish {{term|bede|lang=da}}.
 
 ====Verb====
 {{en-verb|bids|bidding|bid|past2=bade|bid|past_ptc2=bidden}}
