--- a/en/m/mind-blowing.720297.wikitext
+++ b/en/m/mind-blowing.720297.wikitext
@@ -4,7 +4,7 @@
 {{en-adj|head=[[mind]]-[[blowing]]}}
 
 # [[hallucinogenic]]
-# having an overwhelming affect on the [[imagination]]; [[mind-boggling]]
+# having an overwhelming effect on the [[imagination]]; [[mind-boggling]]
 
 ====Derived terms====
 * [[mind-blowingly]]
