t+bg:[[тегло]] t+th:[[น้ำหนัก]] t-balance t+sk:[[váha]] t+sl:[[teža]] t+sh:[[тежина]] t+mk:[[тежина]] t+sh:[[težina]] ([[WT:EDIT|Assisted]]) <weight#32788903>

--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -73,6 +73,7 @@ From {{etyl|ang|en}} ''[[wiht]]'', ''ġewiht'', from {{etyl|gem-pro|en}} {{m|gem
 * Asturian: {{t|ast|pesu|m}}
 * Basque: {{t|eu|pisu}}
 * Belarusian: {{t|be|вага|f|tr=váha|sc=Cyrl}}
+* Bulgarian: {{t+|bg|тегло́|n|sc=Cyrl}}
 * Catalan: {{l|ca|pes}}
 * Chinese:
 *: Mandarin: {{t+|cmn|重量|tr=zhòngliàng|sc=Hani}}, {{qualifier|body weight}} {{t|cmn|體重|sc=Hani}}, {{t+|cmn|体重|tr=tǐzhòng|sc=Hani}}
@@ -90,13 +91,14 @@ From {{etyl|ang|en}} ''[[wiht]]'', ''ġewiht'', from {{etyl|gem-pro|en}} {{m|gem
 * Hawaiian: {{t|haw|kaumaha}}
 * Hungarian: {{t+|hu|súly}}
 * Ido: {{t+|io|pezo}}
-{{trans-mid}}
 * Irish: {{t|ga|meáchan|m}}
 * Italian: {{t+|it|peso|m}}
 * Japanese: {{qualifier|objects}} {{t|ja|重さ|tr=omosa}}, {{qualifier|general}} {{t+|ja|重量|tr=jūryō}}, {{qualifier|living things}} {{t+|ja|体重|tr=taijū}}
+{{trans-mid}}
 * Korean: {{t+|ko|중량|sc=Kore}} ({{t+|ko|重量|sc=Kore}})
 * Ladin: {{t|lld|peis|m}}
 * Latvian: {{t+|lv|svars|m}}
+* Macedonian: {{t|mk|тежина|f|sc=Cyrl}}
 * Occitan: {{t+|oc|pes|m}}
 * Persian: {{t+|fa|وزن|tr=vazn|sc=fa-Arab}}
 * Polish: {{t+|pl|waga|f}}
@@ -107,10 +109,16 @@ From {{etyl|ang|en}} ''[[wiht]]'', ''ġewiht'', from {{etyl|gem-pro|en}} {{m|gem
 * Sardinian: {{t|sc|pesu|m}}, {{t|sc|pessu}}
 * Scots: {{t|sco|weicht}}
 * Scottish Gaelic: {{t|gd|cudrom|m}}
+* Serbo-Croatian:
+*: Cyrillic: {{t|sh|тежина|f}}
+*: Roman: {{t+|sh|težina|f}}
 * Sicilian: {{t+|scn|pisu|m}}
+* Slovak: {{t|sk|váha|f}}
+* Slovene: {{t+|sl|teža|f}}
 * Spanish: {{t+|es|peso|m}}
 * Swedish: {{t+|sv|tyngd|c}}, {{t+|sv|vikt|c}}
 * Telugu: {{t+|te|భారము|tr=bhāramu|sc=Telu}}, {{t+|te|బరువు|tr=baruvu}}
+* Thai: {{t+|th|น้ำหนัก|tr=námnàk|sc=Thai}}
 * Turkish: {{t+|tr|ağırlık}}
 * Ukrainian: {{t+|uk|вага|f|tr=váha|sc=Cyrl}}
 * Venetian: {{t|vec|pexo|m}}
