--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -68,15 +68,15 @@ From {{etyl|ang|en}} ''[[wiht]]'', ''ġewiht'', from {{etyl|gem-pro|en}} {{m|gem
 
 ====Translations====
 {{trans-top|force due to gravity}}
-* Arabic: {{t+|ar|وَزْن|tr=wazn}}
-* Armenian: {{t|hy|կշիռ|tr=kšiṙ}}, {{t+|hy|քաշ|tr=k’aš}}, {{t|hy|ծանրություն|tr=çanrut’yun}}
+* Arabic: {{t+|ar|وَزْن}}
+* Armenian: {{t|hy|կշիռ}}, {{t+|hy|քաշ}}, {{t|hy|ծանրություն}}
 * Asturian: {{t|ast|pesu|m}}
 * Basque: {{t|eu|pisu}}
-* Belarusian: {{t|be|вага|f|tr=váha|sc=Cyrl}}
+* Belarusian: {{t|be|ва́га|f|sc=Cyrl}}
 * Bulgarian: {{t+|bg|тегло́|n|sc=Cyrl}}
 * Catalan: {{l|ca|pes}}
 * Chinese:
-*: Mandarin: {{t+|cmn|重量|tr=zhòngliàng|sc=Hani}}, {{qualifier|body weight}} {{t|cmn|體重|sc=Hani}}, {{t+|cmn|体重|tr=tǐzhòng|sc=Hani}}
+*: Mandarin: {{t+|cmn|重量|tr=zhòngliàng|sc=Hani}}, {{qualifier|body weight}} {{t+|cmn|體重|sc=Hani}}, {{t+|cmn|体重|tr=tǐzhòng|sc=Hani}}
 * Czech: {{t+|cs|váha|f}}
 * Dutch: {{t+|nl|gewicht}}
 * Esperanto: {{t|eo|pezo}}
@@ -87,7 +87,7 @@ From {{etyl|ang|en}} ''[[wiht]]'', ''ġewiht'', from {{etyl|gem-pro|en}} {{m|gem
 * Friulian: {{t|fur|pês|m}}
 * Galician: {{t+|gl|peso|m}}
 * German: {{t+|de|Gewicht|n}}
-* Greek: {{t+|el|βάρος|n|tr=város}}
+* Greek: {{t+|el|βάρος|n}}
 * Hawaiian: {{t|haw|kaumaha}}
 * Hungarian: {{t+|hu|súly}}
 * Ido: {{t+|io|pezo}}
@@ -105,7 +105,7 @@ From {{etyl|ang|en}} ''[[wiht]]'', ''ġewiht'', from {{etyl|gem-pro|en}} {{m|gem
 * Portuguese: {{t+|pt|peso}}
 * Romanian: {{t+|ro|greutate|f}}
 * Romansch: {{t|rm|paisa|f}}, {{t|rm|peisa|f}}, {{t|rm|pesa|f}}, {{t|rm|pais|m}}
-* Russian: {{t+|ru|вес|m|tr=ves|sc=Cyrl}}
+* Russian: {{t+|ru|вес|m|sc=Cyrl}}
 * Sardinian: {{t|sc|pesu|m}}, {{t|sc|pessu}}
 * Scots: {{t|sco|weicht}}
 * Scottish Gaelic: {{t|gd|cudrom|m}}
@@ -117,17 +117,17 @@ From {{etyl|ang|en}} ''[[wiht]]'', ''ġewiht'', from {{etyl|gem-pro|en}} {{m|gem
 * Slovene: {{t+|sl|teža|f}}
 * Spanish: {{t+|es|peso|m}}
 * Swedish: {{t+|sv|tyngd|c}}, {{t+|sv|vikt|c}}
-* Telugu: {{t+|te|భారము|tr=bhāramu|sc=Telu}}, {{t+|te|బరువు|tr=baruvu}}
+* Telugu: {{t+|te|భారము|sc=Telu}}, {{t+|te|బరువు}}
 * Thai: {{t+|th|น้ำหนัก|tr=námnàk|sc=Thai}}
 * Turkish: {{t+|tr|ağırlık}}
-* Ukrainian: {{t+|uk|вага|f|tr=váha|sc=Cyrl}}
+* Ukrainian: {{t+|uk|ва́га|f|sc=Cyrl}}
 * Venetian: {{t|vec|pexo|m}}
 * Vietnamese: {{t+|vi|trọng lượng}} ({{t|vi|重量}})
 {{trans-bottom}}
 
 {{trans-top|object to make something heavier}}
-* Arabic: {{t|ar|ثقل|sc=Arab}}
-* Armenian: {{t+|hy|բեռ|tr=beṙ}}, {{t|hy|ծանրություն|tr=çanrut’yun}}
+* Arabic: {{t|ar|ثِقْل|m|sc=Arab}}
+* Armenian: {{t+|hy|բեռ}}, {{t|hy|ծանրություն}}
 * Chinese:
 *: Mandarin: {{t+|cmn|配重|tr=pèizhòng|sc=Hani}}
 * Czech: {{t|cs|závaží|n}}
@@ -135,7 +135,7 @@ From {{etyl|ang|en}} ''[[wiht]]'', ''ġewiht'', from {{etyl|gem-pro|en}} {{m|gem
 * Finnish: {{t+|fi|paino}}
 * French: {{t+|fr|poids}}, {{t+|fr|lest|m}}
 * German: {{t+|de|Gewicht|n}}
-* Greek: {{t+|el|βάρος|n|tr=város}}
+* Greek: {{t+|el|βάρος|n}}
 * Hungarian: {{t+|hu|súly}}
 {{trans-mid}}
 * Italian: {{t+|it|peso|m}}
@@ -144,29 +144,29 @@ From {{etyl|ang|en}} ''[[wiht]]'', ''ġewiht'', from {{etyl|gem-pro|en}} {{m|gem
 * Maori: {{t|mi|tāwē}} {{qualifier|to add to an anchor}}, {{t|mi|wēti}}, {{t|mi|taumaha}}, {{t|mi|toimaha}}
 * Portuguese: {{t+|pt|peso}}
 * Romanian: {{t+|ro|greutate|f}}
-* Russian: {{t+|ru|груз|m|tr=gruz}}
+* Russian: {{t+|ru|груз|m}}
 * Scots: {{t|sco|weicht}}
 * Spanish: {{t+|es|pesa|f}}
 * Swedish: {{t+|sv|vikt|c}}, {{t+|sv|tyngd|c}}
-* Telugu: {{t+|te|బరువు|tr=baruvu|sc=Telu}}
+* Telugu: {{t+|te|బరువు|sc=Telu}}
 {{trans-bottom}}
 
 {{trans-top|standardized measuring weight}}
-* Arabic: {{t|ar|ثقل|m|tr=ṯiql|sc=Arab}}
-* Armenian: {{t|hy|կշռաքար|tr=kšṙak'ar}}
+* Arabic: {{t|ar|ثِقْل|m|sc=Arab}}
+* Armenian: {{t|hy|կշռաքար}}
 * Chinese:
-*: Mandarin: {{t|cmn|砝碼|sc=Hani}}, {{t+|cmn|砝码|tr=fámǎ|sc=Hani}}
+*: Mandarin: {{t+|cmn|砝碼|sc=Hani}}, {{t+|cmn|砝码|tr=fámǎ|sc=Hani}}
 * Estonian: {{t|et|kaaluma}}
 * Finnish: {{t|fi|punnus}}
 * French: {{t+|fr|poids|m}}
-* Greek: {{t+|el|ζύγι|n|tr=zíγi}}, {{t+|el|σταθμά|n-p|tr=staθmá}}, {{t|el|σταθμίον|n|tr=staθmíon}}
+* Greek: {{t+|el|ζύγι|n}}, {{t+|el|σταθμά|n-p}}, {{t|el|σταθμίον|n}}
 * Hungarian: {{t+|hu|súly}}
 {{trans-mid}}
 * Japanese: {{t|ja|分銅|tr=fundō}}
 * Korean: {{t+|ko|체중|sc=Kore}}
 * Persian: {{t+|fa|وزنه|tr=vazne|sc=fa-Arab}}
 * Portuguese: {{t+|pt|peso|m}}
-* Russian: {{t+|ru|гиря|f|tr=gírja}}
+* Russian: {{t+|ru|ги́ря|f}}
 * Scots: {{t|sco|weicht}}
 * Spanish: {{t+|es|peso|m}}
 * Swedish: {{t+|sv|vikt|c}}
@@ -182,11 +182,11 @@ From {{etyl|ang|en}} ''[[wiht]]'', ''ġewiht'', from {{etyl|gem-pro|en}} {{m|gem
 {{trans-bottom}}
 
 {{trans-top|weight for training muscles}}
-* Arabic: {{t|ar|ثقل|m|tr=ṯiql|sc=Arab}}
+* Arabic: {{t|ar|ثِقْل|m|sc=Arab}}
 * Finnish: {{t+|fi|paino}}
 * French: {{t+|fr|poids|m}}
 * German: {{t+|de|Gewicht|n}}
-* Greek: {{t+|el|βάρη|n-p|tr=vári}}
+* Greek: {{t+|el|βάρη|n-p}}
 * Hungarian: {{t+|hu|súly}}
 * Italian: {{t+|it|peso|m}}
 * Japanese: {{t|ja|重り|tr=omori}}
@@ -194,7 +194,7 @@ From {{etyl|ang|en}} ''[[wiht]]'', ''ġewiht'', from {{etyl|gem-pro|en}} {{m|gem
 * Persian: {{t+|fa|وزنه|tr=vazne|sc=fa-Arab}}
 * Portuguese: {{t+|pt|peso|m}}, {{t+|pt|haltere|m}}
 * Romanian: {{t+|ro|halteră}}, {{t|ro|haltere|f-p}}, {{t+|ro|greutate|f}}
-* Russian: {{t+|ru|блин|m|tr=blin}}, {{t+|ru|гиря|f|tr=gírja}} ''dumbbell'', {{t+|ru|гантель|f|tr=gantɛ́l’}} ''barbell''
+* Russian: {{t+|ru|блин|m}}, {{t+|ru|ги́ря|f}} ''dumbbell'', {{t+|ru|ганте́ль|f|tr=gantɛ́l’}} ''barbell''
 * Scots: {{t|sco|weicht}}
 * Spanish: {{t+|es|pesa|f}}
 * Swedish: {{t+|sv|vikt|c}}, {{t+|sv|tyngd|c}}
@@ -202,22 +202,22 @@ From {{etyl|ang|en}} ''[[wiht]]'', ''ġewiht'', from {{etyl|gem-pro|en}} {{m|gem
 {{trans-bottom}}
 
 {{trans-top|physics: mass}}
-* Arabic: {{t+|ar|وَزْن|tr=wazn}}
-* Armenian: {{t+|hy|զանգված|tr=zangvaç}}
+* Arabic: {{t+|ar|وَزْن|m}}
+* Armenian: {{t+|hy|զանգված}}
 * Czech: {{t+|cs|váha|f}}
 * Danish: {{t|da|vægt|c}}, {{t+|da|masse|c}}
 * Faroese: {{t|fo|vekt|f}}, {{t|fo|massi|m}}
 * Finnish: {{t+|fi|paino}}
 * French: {{t+|fr|masse}}
 * German: {{t+|de|Masse|f}}
-* Greek: {{t+|el|μάζα|f|tr=máza}}
+* Greek: {{t+|el|μάζα|f}}
 * Hungarian: {{t+|hu|tömeg}}
 {{trans-mid}}
 * Italian: {{t+|it|massa|f}}
 * Japanese: {{t|ja|重さ|tr=omosa}}, {{t+|ja|重量|tr=jūryō}}, {{t|ja|荷重|tr=kajū}}
 * Portuguese: {{t+|pt|massa|f}}
 * Romanian: {{t+|ro|masă|f}}
-* Russian: {{t+|ru|вес|m|tr=ves|sc=Cyrl}}, {{t+|ru|масса|f|tr=mássa|sc=Cyrl}}
+* Russian: {{t+|ru|вес|m|sc=Cyrl}}, {{t+|ru|ма́сса|f|sc=Cyrl}}
 * Scots: {{t|sco|weicht}}
 * Slovak: {{t|sk|váha|f}}
 * Spanish: {{t+|es|masa|f}}
@@ -226,17 +226,17 @@ From {{etyl|ang|en}} ''[[wiht]]'', ''ġewiht'', from {{etyl|gem-pro|en}} {{m|gem
 {{trans-bottom}}
 
 {{trans-top|statistics: multiplier}}
-* Arabic: {{t+|ar|وَزْن|tr=wazn}}
-* Armenian: {{t|hy|կշիռ|tr=kšiṙ}}
+* Arabic: {{t+|ar|وَزْن}}
+* Armenian: {{t|hy|կշիռ}}
 * Chinese:
-*: Mandarin: {{t|cmn|權重|sc=Hani}}, {{t+|cmn|权重|tr=quánzhòng|sc=Hani}}
+*: Mandarin: {{t+|cmn|權重|sc=Hani}}, {{t+|cmn|权重|tr=quánzhòng|sc=Hani}}
 * Finnish: {{t|fi|painokerroin}}, {{t+|fi|paino}}
 * Hungarian: {{t+|hu|súly}}, {{t|hu|súlyozás}}
 {{trans-mid}}
 * Italian: {{t+|it|peso|m}}
 * Japanese: {{t|ja|重さ|tr=omosa}}, {{t|ja|重み|tr=omomi}}
 * Portuguese: {{t+|pt|peso|m}}
-* Russian: {{t+|ru|вес|m|tr=ves|sc=Cyrl}}
+* Russian: {{t+|ru|вес|m|sc=Cyrl}}
 * Scots: {{t|sco|weicht}}
 * Swedish: {{t+|sv|vikt|c}}
 {{trans-bottom}}
