t+ko:[[무게]] t+ko:[[체중]] t-balance t+hi:[[भार]] t+az:[[çəki]] t+az:[[ağırlıq]] t+kk:[[салмақ]] t+uz:[[ogʻirlik]] t+uz:[[vazn]] t+lo:[[ນ້ຳໜັກ]] t+tk:[[agyrlyk]] t+ky:[[салмак]] t+tg:[[вазн]] t+my:[[အလ... <weight#32788925>

--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -71,13 +71,16 @@ From {{etyl|ang|en}} ''[[wiht]]'', ''ġewiht'', from {{etyl|gem-pro|en}} {{m|gem
 * Arabic: {{t+|ar|وَزْن}}
 * Armenian: {{t|hy|կշիռ}}, {{t+|hy|քաշ}}, {{t|hy|ծանրություն}}
 * Asturian: {{t|ast|pesu|m}}
+* Azeri: {{t+|az|çəki}}, {{t|az|ağırlıq}}
 * Basque: {{t|eu|pisu}}
 * Belarusian: {{t|be|ва́га|f|sc=Cyrl}}
 * Bulgarian: {{t+|bg|тегло́|n|sc=Cyrl}}
+* Burmese: {{t+|my|အလေး|sc=Mymr}}
 * Catalan: {{l|ca|pes}}
 * Chinese:
 *: Mandarin: {{t+|cmn|重量|tr=zhòngliàng|sc=Hani}}, {{qualifier|body weight}} {{t+|cmn|體重|sc=Hani}}, {{t+|cmn|体重|tr=tǐzhòng|sc=Hani}}
 * Czech: {{t+|cs|váha|f}}
+* Danish: {{t|da|vægt|c}}
 * Dutch: {{t+|nl|gewicht}}
 * Esperanto: {{t|eo|pezo}}
 * Estonian: {{t|et|kaal}}
@@ -89,16 +92,23 @@ From {{etyl|ang|en}} ''[[wiht]]'', ''ġewiht'', from {{etyl|gem-pro|en}} {{m|gem
 * German: {{t+|de|Gewicht|n}}
 * Greek: {{t+|el|βάρος|n}}
 * Hawaiian: {{t|haw|kaumaha}}
+* Hindi: {{t|hi|भार|m|sc=Deva}}
 * Hungarian: {{t+|hu|súly}}
 * Ido: {{t+|io|pezo}}
 * Irish: {{t|ga|meáchan|m}}
 * Italian: {{t+|it|peso|m}}
 * Japanese: {{qualifier|objects}} {{t|ja|重さ|tr=omosa}}, {{qualifier|general}} {{t+|ja|重量|tr=jūryō}}, {{qualifier|living things}} {{t+|ja|体重|tr=taijū}}
+* Kazakh: {{t|kk|салмақ|sc=Cyrl}}
+* Korean: {{t+|ko|중량|sc=Kore}} ({{t+|ko|重量|sc=Kore}}), {{t+|ko|무게|sc=Kore}}, {{t+|ko|체중|sc=Kore}} {{qualifier|body weight}}
 {{trans-mid}}
-* Korean: {{t+|ko|중량|sc=Kore}} ({{t+|ko|重量|sc=Kore}})
+* Kyrgyz: {{t+|ky|салмак|sc=Cyrl}}
 * Ladin: {{t|lld|peis|m}}
+* Lao: {{t|lo|ນ້ຳໜັກ|sc=Laoo}}
 * Latvian: {{t+|lv|svars|m}}
+* Lithuanian: {{t+|lt|svoris|m}}
 * Macedonian: {{t|mk|тежина|f|sc=Cyrl}}
+* Norwegian:
+*: Bokmål: {{t+|nb|vekt|m|f}}
 * Occitan: {{t+|oc|pes|m}}
 * Persian: {{t+|fa|وزن|tr=vazn|sc=fa-Arab}}
 * Polish: {{t+|pl|waga|f}}
@@ -117,10 +127,13 @@ From {{etyl|ang|en}} ''[[wiht]]'', ''ġewiht'', from {{etyl|gem-pro|en}} {{m|gem
 * Slovene: {{t+|sl|teža|f}}
 * Spanish: {{t+|es|peso|m}}
 * Swedish: {{t+|sv|tyngd|c}}, {{t+|sv|vikt|c}}
+* Tajik: {{t|tg|вазн|sc=Cyrl}}
 * Telugu: {{t+|te|భారము|sc=Telu}}, {{t+|te|బరువు}}
 * Thai: {{t+|th|น้ำหนัก|tr=námnàk|sc=Thai}}
 * Turkish: {{t+|tr|ağırlık}}
+* Turkmen: {{t+|tk|agyrlyk}}
 * Ukrainian: {{t+|uk|ва́га|f|sc=Cyrl}}
+* Uzbek: {{t+|uz|ogʻirlik}}, {{t+|uz|vazn}}
 * Venetian: {{t|vec|pexo|m}}
 * Vietnamese: {{t+|vi|trọng lượng}} ({{t|vi|重量}})
 {{trans-bottom}}
