t+yi:[[פֿײַפֿל]] ([[WT:EDIT|Assisted]]) <whistle#32789592>

--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -99,6 +99,7 @@ From {{etyl|enm|en}} {{term|whistlen|lang=enm}}; {{etyl|ang|en}} {{term|hwistlan
 * Turkish: {{t+|tr|ıslık}}
 * Ukrainian: {{t|uk|свист|m|sc=Cyrl}}, {{t|uk|свисто́к|m|sc=Cyrl}}, {{t|uk|сюрчо́к|m|sc=Cyrl}}
 * Vietnamese: {{t+|vi|còi}}, {{t|vi|tiếng hót}}, {{t|vi|tiếng huýt}}
+* Yiddish: {{t|yi|פֿײַפֿל|n|sc=Hebr}}
 {{trans-bottom}}
 
 {{trans-top|act of whistling}}
