--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -290,7 +290,8 @@ From {{etyl|ang|en}} ''[[wiht]]'', ''ġewiht'', from {{etyl|gem-pro|en}} {{m|gem
 ===Verb===
 {{en-verb}}
 
-# {{context|transitive|lang=en}} To [[add]] weight to something, in order to make it [[heavier]].
+# {{context|transitive|lang=en}} To [[add]] weight to something; to make something [[heavier]].
+## {{cx|transitive|dyeing|lang=en}} To load (fabrics) with [[barite]], etc. to increase the weight.
 # {{context|transitive|lang=en}} To [[load]], [[burden]] or [[oppress]] someone.
 # {{context|transitive|mathematics|lang=en}} To [[assign]] weights to individual [[statistic]]s.
 # {{context|transitive|lang=en}} To [[bias]] something; to [[slant]].
