t+yi:[[געוויכט]] t-balance ([[WT:EDIT|Assisted]]) <weight#32790364>

--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -101,9 +101,9 @@ From {{etyl|ang|en}} ''[[wiht]]'', ''ġewiht'', from {{etyl|gem-pro|en}} {{m|gem
 * Japanese: {{qualifier|objects}} {{t|ja|重さ|tr=omosa}}, {{qualifier|general}} {{t+|ja|重量|tr=jūryō}}, {{qualifier|living things}} {{t+|ja|体重|tr=taijū}}
 * Kazakh: {{t|kk|салмақ|sc=Cyrl}}
 * Korean: {{t+|ko|중량|sc=Kore}} ({{t+|ko|重量|sc=Kore}}), {{t+|ko|무게|sc=Kore}}, {{t+|ko|체중|sc=Kore}} {{qualifier|body weight}}
-{{trans-mid}}
 * Kyrgyz: {{t+|ky|салмак|sc=Cyrl}}
 * Ladin: {{t|lld|peis|m}}
+{{trans-mid}}
 * Lao: {{t|lo|ນ້ຳໜັກ|sc=Laoo}}
 * Latvian: {{t+|lv|svars|m}}
 * Lithuanian: {{t+|lt|svoris|m}}
@@ -137,6 +137,7 @@ From {{etyl|ang|en}} ''[[wiht]]'', ''ġewiht'', from {{etyl|gem-pro|en}} {{m|gem
 * Uzbek: {{t+|uz|ogʻirlik}}, {{t+|uz|vazn}}
 * Venetian: {{t|vec|pexo|m}}
 * Vietnamese: {{t+|vi|trọng lượng}} ({{t|vi|重量}})
+* Yiddish: {{t|yi|געוויכט|n|sc=Hebr}}
 {{trans-bottom}}
 
 {{trans-top|object to make something heavier}}
