--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -69,6 +69,16 @@ From {{etyl|enm|en}} {{m|enm|binden}}, from {{etyl|ang|en}} {{m|en|bindan}}, fro
 * [[bind up in]] - to cause to be wholly engrossed with; to absorb in.
 
 ====Translations====
+{{trans-top|''transitive'' To tie or fasten tightly together, with a cord, band, ligature, chain, etc.}}
+* German: {{t|de|binden}}
+* North Frisian:
+*: Föhr-Amrum and Sylt: {{t|frr|binj}}
+*: Helgoland: {{t|frr|bin}}
+*: Mooring: {{t|frr|bine}}
+{{trans-mid}}
+* Old Frisian: {{t|ofs|binda}}
+* West Frisian: {{t|fy|bine}}
+{{trans-bottom}}
 {{trans-top|''transitive'' connect}}
 * Arabic: {{t|ar|ربط|tr=rabaṭa}}
 *: Egyptian Arabic: {{t|arz|ربط|tr=rabaṭ|sc=Arab}}, {{t|arz|وصل|tr=waṣal|sc=Arab}}
