t+stq:[[biende]] ([[WT:EDIT|Assisted]]) <bind#32793288>

--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -77,6 +77,7 @@ From {{etyl|enm|en}} {{m|enm|binden}}, from {{etyl|ang|en}} {{m|en|bindan}}, fro
 *: Mooring: {{t|frr|bine}}
 {{trans-mid}}
 * Old Frisian: {{t|ofs|binda}}
+* Saterland Frisian: {{t|stq|biende}}
 * West Frisian: {{t|fy|bine}}
 {{trans-bottom}}
 {{trans-top|''transitive'' connect}}
