--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -69,7 +69,7 @@ From {{etyl|enm|en}} {{m|enm|binden}}, from {{etyl|ang|en}} {{m|en|bindan}}, fro
 * [[bind up in]] - to cause to be wholly engrossed with; to absorb in.
 
 ====Translations====
-{{trans-top|''transitive'' To tie or fasten tightly together, with a cord, band, ligature, chain, etc.}}
+{{trans-top|''transitive'' to tie or fasten tightly together, with a cord, band, ligature, chain, etc.}}
 * German: {{t|de|binden}}
 * North Frisian:
 *: Föhr-Amrum and Sylt: {{t|frr|binj}}
