t+osx:[[bindan]] ([[WT:EDIT|Assisted]]) <bind#32793311>

--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -81,6 +81,7 @@ From {{etyl|enm|en}} {{m|enm|binden}}, from {{etyl|ang|en}} {{m|en|bindan}}, fro
 * Old English: {{t|ang|bindan}}
 * Old Frisian: {{t|ofs|binda}}
 * Old Norse: {{t|non|binda}}
+* Old Saxon: {{t|osx|bindan}}
 * Saterland Frisian: {{t|stq|biende}}
 * West Frisian: {{t|fy|bine}}
 {{trans-bottom}}
