--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -81,6 +81,7 @@ From {{etyl|enm|en}} {{m|enm|binden}}, from {{etyl|ang|en}} {{m|en|bindan}}, fro
 *: Föhr-Amrum and Sylt: {{t|frr|binj}}
 *: Helgoland: {{t|frr|bin}}
 *: Mooring: {{t|frr|bine}}
+* Old Dutch: {{t|odt|bindan}}
 * Old English: {{t|ang|bindan}}
 * Old Frisian: {{t|ofs|binda}}
 * Old Norse: {{t|non|binda}}
