t+dum:[[binden]] ([[WT:EDIT|Assisted]]) <bind#32793319>

--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -74,6 +74,7 @@ From {{etyl|enm|en}} {{m|enm|binden}}, from {{etyl|ang|en}} {{m|en|bindan}}, fro
 * German: {{t|de|binden}}
 * Low German:
 *: German Low German: {{t+|nds-de|binnen}}
+* Middle Dutch: {{t|dum|binden}}
 * Middle English: {{t|enm|binden}}
 * Middle Low German: {{t|gml|binden}}
 {{trans-mid}}
