--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -70,6 +70,7 @@ From {{etyl|enm|en}} {{m|enm|binden}}, from {{etyl|ang|en}} {{m|en|bindan}}, fro
 
 ====Translations====
 {{trans-top|''transitive'' to tie or fasten tightly together, with a cord, band, ligature, chain, etc.}}
+* Afrikaans: {{t|af|bind}}, {{t|af|bind}}
 * Dutch: {{t+|nl|binden}}
 * Faroese: {{t|fo|binda}}
 * German: {{t|de|binden}}
