--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -85,6 +85,7 @@ From {{etyl|enm|en}} {{m|enm|binden}}, from {{etyl|ang|en}} {{m|en|bindan}}, fro
 *: Föhr-Amrum and Sylt: {{t|frr|binj}}
 *: Helgoland: {{t|frr|bin}}
 *: Mooring: {{t|frr|bine}}
+* Norwegian: {{t+|no|binde}}
 * Old Dutch: {{t|odt|bindan}}
 * Old English: {{t|ang|bindan}}
 * Old Frisian: {{t|ofs|binda}}
