--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -92,6 +92,7 @@ From {{etyl|enm|en}} {{m|enm|binden}}, from {{etyl|ang|en}} {{m|en|bindan}}, fro
 * Old Norse: {{t|non|binda}}
 * Old Saxon: {{t|osx|bindan}}
 * Saterland Frisian: {{t|stq|biende}}
+* Swedish: {{t+|sv|binda}}
 * West Frisian: {{t|fy|bine}}
 {{trans-bottom}}
 {{trans-top|''transitive'' connect}}
