--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -75,6 +75,7 @@ From {{etyl|enm|en}} {{m|enm|binden}}, from {{etyl|ang|en}} {{m|en|bindan}}, fro
 * Dutch: {{t+|nl|binden}}
 * Faroese: {{t|fo|binda}}
 * German: {{t|de|binden}}
+* Gothic: {{t|got|𐌱𐌹𐌽𐌳𐌰𐌽|sc=Goth}}
 * Icelandic: {{t+|is|binda}}
 * Low German:
 *: German Low German: {{t+|nds-de|binnen}}
