--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -95,6 +95,7 @@ From {{etyl|enm|en}} {{m|enm|binden}}, from {{etyl|ang|en}} {{m|en|bindan}}, fro
 * Old Frisian: {{t|ofs|binda}}
 * Old Norse: {{t|non|binda}}
 * Old Saxon: {{t|osx|bindan}}
+* Russian: {{t+|ru|свя́зывать|impf|sc=Cyrl}}
 * Saterland Frisian: {{t|stq|biende}}
 * Swedish: {{t+|sv|binda}}
 * West Frisian: {{t|fy|bine}}
