--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -169,6 +169,7 @@ From {{etyl|enm|en}} {{term|blowen|lang=enm}}, from {{etyl|ang|en}} {{m|ang|blā
 * Macedonian: {{t|mk|дува}}
 * Malay: {{t|ms|tiup}}, {{t|ms|hembus}}
 * North Frisian: {{qualifier|Föhr-Amrum}} {{t|frr|blä}}
+* Old Frisian: {{t|ofs|blā}}
 * Polish: {{t+|pl|dmuchać}}, {{t+|pl|dąć}}, {{t+|pl|wiać}}
 * Portuguese: {{t+|pt|soprar}}, {{t+|pt|assoprar}}
 * Quechua: {{t|qu|phukuy}}, {{t|qu|wayray}}
