--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -86,6 +86,10 @@ From {{etyl|enm|en}} {{m|enm|plege}}, from {{etyl|xno|en}} {{m|fro|plege}}, from
 * {{l|en|pledgeless}}
 * {{l|en|pledge of allegiance}}
 
+====See also====
+* {{l|en|oath}}
+* {{l|en|vow}}
+
 ====Translations====
 {{trans-top|solemn promise}}
 * Arabic: {{t|ar|ضمان|tr=ɖamān|m}}
