--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -99,7 +99,7 @@ From {{etyl|enm|en}} {{m|enm|plege}}, from {{etyl|xno|en}} {{m|fro|plege}}, from
 * Chinese:
 *: Mandarin: {{t+|cmn|誓言|tr=shìyán|sc=Hani}}, {{t|cmn|誓詞|sc=Hani}}, {{t+|cmn|誓词|tr=shìcí|sc=Hani}}
 * Finnish: {{t+|fi|lupaus}}
-* French: {{t+|fr|gage|m}}
+* French: {{t+|fr|gage|m}}, {{t+|fr|serment|m}}
 * German: {{t+|de|Pfand|n}}
 * Hungarian: {{t+|hu|fogadalom}}
 * Italian: {{t+|it|giuramento|m}}, {{t+|it|pegno|m}}, {{t|it|promessa solenne|f}}
