t+vec:[[łigar]] t+vec:[[ligar]] t+scn:[[ligari]] t+scn:[[liari]] t+scn:[[lijari]] t+oc:[[ligar]] t+es:[[liar]] ([[WT:EDIT|Assisted]]) <bind#32794692>

--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -129,14 +129,17 @@ From {{etyl|enm|en}} {{m|enm|binden}}, from {{etyl|ang|en}} {{m|en|bindan}}, fro
 *: Föhr-Amrum: {{t|frr|ferbinj}}
 *: Mooring: {{t|frr|ferbine}}
 * Norwegian: {{t+|no|binde}}
+* Occitan: {{t+|oc|ligar}}
 * Old Church Slavonic: {{t|cu|вѧсти|sc=Cyrs}}
 * Portuguese: {{t+|pt|conectar}}, {{t+|pt|juntar}}, {{t+|pt|copular}}, {{t+|pt|ligar}}
 * Romanian: {{t|ro|cupla}}, {{t|ro|conecta}}, {{t|ro|lega}}
 * Russian: {{t+|ru|вяза́ть|impf}}, {{t+|ru|свя́зывать|impf}}, {{t+|ru|связа́ть|pf}}
 * Scottish Gaelic: {{t|gd|cuibhrich}}, {{t|gd|naisg}}, {{qualifier|sheaves}} {{t|gd|sguab}}
-* Spanish: {{t|es|atar}} (tie), {{t|es|empastar}} (books)
+* Sicilian: {{t+|scn|ligari}}, {{t+|scn|liari}}, {{t+|scn|lijari}}
+* Spanish: {{t|es|atar}} (tie), {{t|es|empastar}} (books), {{t+|es|liar}}
 * Swedish: {{t+|sv|förbinda}}
 * Turkish: {{t+|tr|bağlamak}}
+* Venetian: {{t|vec|łigar}}, {{t|vec|ligar}}
 * Vietnamese: {{t+|vi|kết hợp}}, {{t+|vi|liên kết}}, {{t+|vi|nối}}
 {{trans-bottom}}
 
