/* Pronunciation */ mn sp <月#32799920>

--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -34,7 +34,7 @@ As part of a compound, should not be confused with [[⺼]], form of {{term|肉||
 |c=jyut6
 |h=pfs=ngie̍t
 |md=nguŏk
-|mn=gua̍t/gue̍h/ge̍h
+|mn=goa̍t/goe̍h/ge̍h
 |w=5hhyq,5hhioq
 |mc=y
 |oc=y
