--- a/en/c/celestial object.855631.wikitext
+++ b/en/c/celestial object.855631.wikitext
@@ -1,6 +1,6 @@
-==you==
+==English==
 
-===sucks===
+===Noun===
 {{en-noun|head=[[celestial]] [[object]]}}
 
 # {{context|astronomy|astrology|lang=en}} A [[natural]] object which is located outside of [[Earth]][['s]] [[atmosphere]], such as the [[Moon]], the [[Sun]], an [[asteroid]], [[planet]], or [[star]].
