--- a/en/s/stoat.8235.wikitext
+++ b/en/s/stoat.8235.wikitext
@@ -2,6 +2,9 @@
 [[File:Mustela erminea upright.jpg|right|thumb|A '''stoat''']]
 {{wikipedia}}
 
+===Etymology===
+mid-15c., ''[[stote]]'', ("the ermine, especially in its brown summer coat"), of uncertain origin. The word bears resemblance to Old Norse ''[[stutr]]'' ("bull"), Swedish ''[[stut]]'' ("bull"),  Danish ''[[stud]]'' ("ox"), but the sense is difficult unless a common notion is "male animal".
+
 ===Pronunciation===
 * {{IPA|/ˈstəʊt/|lang=en}}
 * {{rhymes|əʊt|lang=en}}
