--- a/en/a/amice.720080.wikitext
+++ b/en/a/amice.720080.wikitext
@@ -17,7 +17,7 @@
 ==Latin==
 
 ===Etymology===
-From {{m|la|amīcus||friendly, amicable|lang=la}}.
+From {{m|la|amīcus||friendly, amicable}}.
 
 ===Adverb===
 {{la-adv|amīc||e}}
