t+yue:[[廣告]] t+yue:[[广告]] t+yue:[[告白]] t+nan:[[廣告]] t+nan:[[广告]] t-balance ([[WT:EDIT|Assisted]]) <advertisement#32824182>

--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -59,7 +59,9 @@ From {{etyl|frm|en}} {{term|advertissement||statement calling attention|lang=frm
 * Bulgarian: {{t+|bg|рекла́ма|f}}
 * Catalan: {{t|ca|anunci|m}}
 * Chinese:
+*: Cantonese: {{t|yue|廣告|sc=Hani}}, {{t|yue|广告|tr=gwong2 gou3|sc=Hani}}, {{t|yue|告白|tr=gou3 baak6|sc=Hani}}
 *: Mandarin: {{t+|cmn|廣告|sc=Hani}}, {{t+|cmn|广告|tr=guǎnggào|sc=Hani}}
+*: Min Nan: {{t+|nan|廣告|sc=Hani}}, {{t|nan|广告|tr=kóng-kò|sc=Hani}}
 * Czech: {{t+|cs|reklama|f}}
 * Danish: {{t+|da|reklame}}
 * Dutch: {{t+|nl|reclame|f|m}}, {{t+|nl|advertentie|f}}
@@ -81,8 +83,8 @@ From {{etyl|frm|en}} {{term|advertissement||statement calling attention|lang=frm
 * Korean: {{t+|ko|광고|sc=Hang}} ({{t+|ko|廣告|sc=Hani}})
 * Kyrgyz: {{t+|ky|жарнама}}
 * Latin: {{t|la|prescriptio|f}}
-* Latvian: {{t|lv|reklāma|f}}
 {{trans-mid}}
+* Latvian: {{t|lv|reklāma|f}}
 * Lithuanian: {{t|lt|reklama}}
 * Macedonian: {{t|mk|рекла́ма|f}}
 * Malay: {{t|ms|iklan}}
