--- a/en/m/marten.8230.wikitext
+++ b/en/m/marten.8230.wikitext
@@ -55,11 +55,12 @@ From {{etyl|enm|en}} {{m|enm|martren}}, {{m|enm|martryn}}, from {{etyl|xno|en}} 
 * Japanese: {{t+|ja|テン|tr=ten|sc=Jpan}}
 * Korean: {{t+|ko|담비|tr=dam bi|sc=Kore}}
 * Ladin: {{t|lld|meder}}
-{{trans-mid}}
 * Latin: {{t|la|martes|f}}
+{{trans-mid}}
 * Latvian: {{t|lv|cauna|f}}
 * Lithuanian: {{t+|lt|kiaunė|f}}
 * Macedonian: {{t|mk|куна|f}}
+* Manx: {{t|gv|kayt billey|m}}
 * Narragansett: {{t|xnt|wappenagh}}
 * Norman: {{t|nrf|martre|f}} {{qualifier|Jersey}}
 * Norwegian: {{t|no|mår}}
