--- a/en/e/ermine.8234.wikitext
+++ b/en/e/ermine.8234.wikitext
@@ -54,7 +54,7 @@ Note: The supposed derivation from {{etyl|ML.|-}} {{m|la|mūs}} {{term|Armenius|
 * Icelandic: {{t+|is|hreysiköttur}}
 * Irish: {{t|ga|easóg|f}}, {{t|ga|cailín bán|m}}
 * Italian: {{t|it|ermellino|m}}
-* Japanese: {{t+|ja|食肉目|tr=okojo|sc=Jpan}}
+* Japanese: {{t+|ja|おこじょ|tr=okojo|sc=Jpan}}
 * Norman: {{t|nrf|b'lette|f}}
 * Ladin: {{t|lld|armelin}}
 * Latin: {{t|la|Mustela erminea|f}}
