--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -59,7 +59,7 @@ Abbreviation of various terms and phrases.
 * Armenian: {{t|hy|CD|sc=Armn}}
 * Bengali: {{t|bn|সিডি|sc=Beng}}
 * Chinese:
-*: Mandarin: {{t+|cmn|CD|tr=sìdì|sc=Hani}}, {{t|cmn|光盤|sc=Hani}}, {{t+|cmn|光盘|tr=guāngpán|sc=Hani}}, {{t+|cmn|光碟|tr=guāngdié|sc=Hani}}
+*: Mandarin: {{t+|cmn|CD|tr=xīdì|sc=Hani}}
 * Dutch: {{t+|nl|cd|m}} (lower case)
 * Esperanto: {{t|eo|KD}}
 * Finnish: {{t+|fi|CD}}
