--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -155,11 +155,12 @@ From {{etyl|enm|en}} {{term|lether|lang=enm}}, from {{etyl|ang|en}} {{term|leþe
 * Faroese: {{t|fo|leður-}}
 * Finnish: {{t+|fi|nahka|alt=nahka-}}, {{t+|fi|nahkainen}}
 * French: {{t|fr|de cuir}}
+* German: {{t+|de|ledern}}
 * Lithuanian: {{t|lt|odinis}}
 * Persian: {{t+|fa|چرمی|tr=charmi}}
 * Polish: {{t+|pl|skórzany}}
-* Portuguese: {{t|pt|[[de]] [[couro]]}}
 {{trans-mid}}
+* Portuguese: {{t|pt|[[de]] [[couro]]}}
 * Romanian: {{qualifier|fabricat}} {{t+check|ro|piele|alt=din piele}} <!-- was "din [[piele]]" - assumed inflected form or vocalised spelling; please verify if linking is acceptable. see [[User:Kephir/gadgets/xte#Translation_fixing]] -->
 * Russian: {{t+|ru|кожаный|tr=kóžanyj}}
 * Serbo-Croatian:
