--- a/en/m/mouse wheel.741247.wikitext
+++ b/en/m/mouse wheel.741247.wikitext
@@ -13,6 +13,7 @@
 {{trans-top|disc used for scrolling}}
 * Czech: {{t|cs|skrolovací kolečko|n}}
 {{trans-mid}}
+* German: {{t|de|Mausrad|n}}
 * Spanish: {{t|es|rueda del ratón}}
 {{trans-bottom}}
 
