t+he:[[נשבע]] ([[WT:EDIT|Assisted]]) <pledge#32837078>

--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -33,7 +33,7 @@ From {{etyl|enm|en}} {{m|enm|plege}}, from {{etyl|xno|en}} {{m|fro|plege}}, from
 * Finnish: {{t+|fi|luvata}}, {{t+|fi|sitoutua}}
 * French: {{t+|fr|promettre}}
 * German: {{t|de|zusichern}}, {{t+|de|versprechen}}
-* Hebrew: {{t-needed|he}}
+* Hebrew: {{t|he|נשבע|tr=nishbá|sc=Hebr}}
 * Icelandic: {{t-needed|is}}
 * Italian: {{t+|it|promettere}}, {{t+|it|impegnarsi}}
 * Japanese: {{t+|ja|公約|tr=kōyaku suru|alt=公約する}}, {{t+|ja|保証|tr=ほしょうする, hoshō suru|alt=保証する|sc=Jpan}}
