--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -20,8 +20,7 @@ From {{etyl|enm|en}} {{m|enm|squirel}}, {{m|enm|squyrelle}}, from {{etyl|xno|en}
 # One of the small [[roller]]s of a [[carding]] [[machine]] which work with the large [[cylinder]].
 
 ====Synonyms====
-* {{l/en|scug}}
-* {{l/en|skug}}
+* {{l/en|scug}} {{qualifier|provincial}}
 
 ====Derived terms====
 * [[gray squirrel]]
