--- a/en/o/octillion.34109.wikitext
+++ b/en/o/octillion.34109.wikitext
@@ -23,12 +23,16 @@
 ====Translations====
 {{trans-top|a thousand trillion trillion, 10<sup>27</sup>}}
 * Finnish: {{t|fi|kvadriljardi}}
+* French: {{t+|fr|quatrilliard}}
 * German: {{t+|de|Quadrilliarde}}
+* Italian: {{t+|it|quattriliardo}}
 * Japanese: {{t|ja|千秭|tr=せんし, senshi|sc=Jpan}}
 * Malay: {{t|ms|oktilion}}
 {{trans-mid}}
 * Polish: {{t|pl|kwadryliard|m}}
+* Portuguese: {{t+|pt|octilhão}}
 * Russian: {{t|ru|окталлион}}
+* Spanish: {{t+|es|mil quatrillones}}
 * Ukrainian: {{t+|uk|октильйон}}
 {{trans-bottom}}
 
@@ -39,6 +43,7 @@
 {{trans-mid}}
 * French: {{t+|fr|octillion|m}}
 * German: {{t+|de|Oktillion|f}}
+* Spanish: {{t+|es|octillón}}
 {{trans-bottom}}
 
 {{checktrans-top}}
