--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -233,6 +233,7 @@ From {{etyl|enm|en}} {{m|enm|at}}, from {{etyl|ang|en}} {{m|ang|æt||at, near, b
 * Italian: {{t+|it|chiocciola|f}}
 * Polish: {{t+|pl|małpa|f}}
 * Russian: {{t|ru|собачка}}
+* Spanish: {{t|es|arroba|}}
 {{trans-bottom}}
 
 ===Statistics===
