--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -526,6 +526,26 @@ From {{etyl|en|tcs}} {{m|en|pig}}.
 
 [[Category:tcs:Mammals]]
 
+----
+
+==Welsh==
+
+===Etymology===
+Cognate with Breton {{m|br|beg}}.
+
+===Pronunciation===
+* {{IPA|/piːg/|lang=cy}}
+
+===Noun===
+{{cy-noun|f|pigau}}
+
+# [[beak]], [[bill]]
+# [[point]], [[spike]]
+# [[spout]]
+
+===Mutation===
+{{cy-mut-p|ig}}
+
 [[af:pig]]
 [[ang:pig]]
 [[ar:pig]]
