--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -281,15 +281,41 @@ From {{etyl|bat-pro|lv}} {{m|bat-pro|*bet}}, from {{etyl|ine-pro|lv}} {{m|ine-pr
 ==Lithuanian==
 
 ===Etymology===
-From {{etyl|bat-pro|lv}} {{m|bat-pro|*bet}}, from {{etyl|ine-pro|lv}} {{m|ine-pro|*be}}, {{m|ine-pro|*bʰe||outside, without}} to which an old particle ''-t'' was added. Cognates include {{etyl|lv|-}} {{term|bet|lang=lv}}, {{etyl|xsv|-}} {{term|bat|lang=xsv}}.<ref>{{R:lv:LEV}}</ref> 
+Cognate with {{etyl|lv|-}} {{m|lv|bet}}. From {{m|lt|bè||without}} + particle ''-t''. This particle comes from {{m|lt|tè||let, may it be}}, compare {{m|lt|nèt||even}} < {{m|lt|nete}}.
 
 ===Pronunciation===
-* {{IPA|[bʲɛt]|lang=lt}}
+* {{IPA|/bʲɛt/|lang=lt}}
 
 ===Conjunction===
 {{head|lt|conjunction|head=bèt}}
 
-# [[but]]
+# {{lb|lt|adversative}} [[but]], [[yet]], [[though]] {{gloss|introduces an idea [[contrary]] or a [[concession]] to the previous statement}}
+#: ''{{m|lt|norėti|Nóriu}}, '''bèt''' {{m|lt|galėti|negaliù}}.'' - I want to, '''but''' I can't.
+#: ''{{m|lt|paskutinis|Paskutìnis}}, '''bèt''' {{m|lt|nè}} {{m|lt|prastas|prasčiáusias}}'' - Last '''but''' not least
+
+===Particle===
+{{head|lt|particle|head=bet}} (''unstressed'')
+
+# {{lb|lt|in conjunction with [[w:interrogative word|interrogative words]]}} [[any]]-, -[[ever]] {{gloss|suggesting the [[complement]] is not improtant or [[irrelevant]]}}
+#: '''''bet''' {{m|lt|kadà}}'' - [[whenever]], [[anytime]]
+#:: ''{{m|lt|jaustis|Jaučiúosi}} {{m|lt|geras|geriaũ}} {{m|lt|neĩ}} '''bet kadà'''!'' - I feel better than '''ever'''!
+#: '''''bet''' {{m|lt|kurìs}}'' - [[whichever]], [[any]]
+#:: '''''Bet kuriuõ''' {{m|lt|atvejis|ãtveju}} {{m|lt|àš}} {{m|lt|daryti|darýsiu}} {{m|lt|politinis|polìtinę}} {{m|lt|karjera|karjèrą}}'' - I'll make it in politics, '''no matter what''' it takes.
+
+===Derived terms====
+{{der-top|terms derived from bet}}
+* {{l|lt|betgi}}
+* {{l|lt|bet kada}}
+* {{l|lt|bet kaip}}
+* {{l|lt|bet kas}}
+* {{l|lt|bet katras}}
+{{der-mid}}
+* {{l|lt|bet kiek}}
+* {{l|lt|bet koks}}
+* {{l|lt|bet kuomet}}
+* {{l|lt|bet kur}}
+* {{l|lt|bet kuris}}
+{{der-bottom}}
 
 ===References===
 <references />
