--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -84,6 +84,7 @@ From earlier {{m|en|iland}}, from {{etyl|enm|en}} {{m|enm|iland}}, {{m|enm|yland
 * Asturian: {{t+|ast|islla|f}}
 * Aymara: {{t-needed|ay}}
 * Azeri: {{t+|az|ada}}
+* Baba Malay: {{t|mbf|pulo}}
 * Baekje: {{t|pkc|斯麻|tr=sama}}
 * Bashkir: {{t|ba|утрау}}
 * Basque: {{t+|eu|irla}}, {{t+|eu|uharte}}
