--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -54,8 +54,8 @@ From {{etyl|enm|en}} {{term|rabet|lang=enm}}, from {{etyl|frm|en}} dialect (comp
 * Ainu: {{t|ain|イセポ|tr=isepo}}
 * Alabama: {{t|akz|chokfi}}
 * Albanian: {{t|sq|lepur i gropave}}
-* Arabic: {{t|ar|ارنب|m|alt=أرْنَب|tr='arnab}}
-* Armenian: {{t|hy|ճագար|tr=č̣agar|sc=Armn}}
+* Arabic: {{t|ar|أرنب|m|alt=أرْنَب|tr=ʾarnab}}
+* Armenian: {{t|hy|ճագար|sc=Armn}}
 * Aromanian: {{t|rup|ljepuri|m}}, {{t|rup|ljepure|m}}, {{t|rup|ljepur|m}}
 * Asturian: {{t|ast|conexu|m}}
 * Azeri: {{t+|az|dovşan}}
@@ -66,8 +66,8 @@ From {{etyl|enm|en}} {{term|rabet|lang=enm}}, from {{etyl|frm|en}} dialect (comp
 * Bengali: {{t|bn|খরগোশ|tr=khôrgosh|sc=Beng}}, {{t|bn|শশ|tr=shasha|sc=Beng}}
 * Blackfoot: {{t|bla|aahtsista}}
 * Breton: {{t|br|lapin|m}}, {{t+|br|konikl|m}}
-* Bulgarian: {{t+|bg|заек|m|tr=zaek}}
-* Burmese: {{t+|my|ယုန်|tr=youn|sc=Mymr}}
+* Bulgarian: {{t+|bg|заек|m}}
+* Burmese: {{t+|my|ယုန်|sc=Mymr}}
 * Catalan: {{t+|ca|conill|m}}
 * Central Melanau: {{t|mel|tikuih belada}}, {{t|mel|belabau belada}}
 * Chechen: {{t|ce|пхьагал}}
@@ -95,8 +95,8 @@ From {{etyl|enm|en}} {{term|rabet|lang=enm}}, from {{etyl|frm|en}} dialect (comp
 * Gamilaraay: {{t|kld|bina gaarr}}
 * Georgian: {{t|ka|ბოცვერი|sc=Geor}}
 * German: {{t+|de|Kaninchen|n}}, {{t+|de|Karnickel|n}} {{qualifier|colloquial}}, {{t|de|Schlappohr|n}} {{qualifier|humorous}}
-* Greek: {{t+|el|κουνέλι|n|tr=kounéli}}
-*: Ancient: {{t|grc|κούνικλος|m|tr=kouniklos|sc=polytonic}}
+* Greek: {{t+|el|κουνέλι|n}}
+*: Ancient: {{t|grc|κούνικλος|m}}
 * Gujarati: {{t|gu|સસલું|tr=sasluṃ}}
 * Hebrew: {{t+|he|אַרְנָב|m|tr=arnáv}}, {{t+|he|אַרְנֶבֶת|f|tr=arnévet}}
 * Hindi: {{t|hi|ख़रगोश|m|tr=xargoś|sc=Deva}}, {{t|hi|शशक|m|tr=śaśak|sc=Deva}}, {{t|hi|सुस्सा|tr=sussA|sc=Deva}}, {{t|hi|खरहा|tr=kharhaa|sc=Deva}}
@@ -114,25 +114,25 @@ From {{etyl|enm|en}} {{term|rabet|lang=enm}}, from {{etyl|frm|en}} dialect (comp
 * Norman: {{t|nrf|lapîn|m}}
 * Kala Lagaw Ya: {{t-needed|mwp}}}
 * Kannada: {{t+|kn|ಮೊಲ|sc=Knda}}
-* Kazakh: {{t|kk|ор қоян|tr=or qoyan|sc=Cyrl}}, {{t|kk|үй қояны|tr=üy qoyanı|sc=Cyrl}}, {{t|kk|қоян|tr=qoyan|sc=Cyrl}}
+* Kazakh: {{t|kk|ор қоян|sc=Cyrl}}, {{t|kk|үй қояны|sc=Cyrl}}, {{t|kk|қоян|sc=Cyrl}}
 * Khmer: {{t|km|ទន្សាយគល់|tr=tʊənsaay kʊəl|sc=Khmr}}
 * Korean: {{t+|ko|토끼|sc=Hang}}
 * Kriol: {{t-needed|rop}}
 * Kurdish:
 *: Kurmanji: {{t+|ku|kêroşk}}, {{t+|ku|xirrnîfk}}
 *: Sorani: {{t|ku|که‌روێشک|tr=kêrwişk}}
-* Kyrgyz: {{t|ky|коён|tr=koyon|sc=Cyrl}}
+* Kyrgyz: {{t|ky|коён|sc=Cyrl}}
 * Ladin: {{t|lld|conicio}}
 * Ladino: {{t|lad|konejo}}
-* Lao: {{t+|lo|ກະຕ່າຍ|tr=kátāːy|sc=Laoo}}
+* Lao: {{t+|lo|ກະຕ່າຍ|sc=Laoo}}
 * Latin: {{t+|la|cunīculus|m}}
 * Latvian: {{t|lv|trusis}}
 * Lithuanian: {{t+|lt|triušis}}
 * Lojban: {{t+|jbo|ractu}}
 {{trans-mid}}
 * Low German: {{t|nds|Kanink|m|n}}, {{t|nds|Kaninken|m|n}}
-* Luxembourgish: {{t|lb|kanéngchen}}
-* Macedonian: {{t|mk|заjак|m|tr=zajak}}
+* Luxembourgish: {{t|lb|Kanéngchen}}
+* Macedonian: {{t|mk|заjак|m}}
 * Malay:
 *: Rumi: {{t+|ms|arnab}}, {{t|ms|kelinci}}, {{t|ms|kucing belanda}}, {{t|ms|kuilu}}, {{t|ms|terwelu}}
 *: Jawi: {{t|ms|ارنب|sc=Arab}}, {{t|ms|کلينچي|sc=Arab}}, {{t|ms|کوچيڠ بلندا|sc=Arab}}, {{t|ms|کويلو|sc=Arab}}, {{t|ms|ترويلو|sc=Arab}}
@@ -143,7 +143,7 @@ From {{etyl|enm|en}} {{term|rabet|lang=enm}}, from {{etyl|frm|en}} dialect (comp
 * Marathi: {{t|mr|ससा|m}}, {{t|mr|सशी|f}}
 * Maricopa: {{t|mrc|xalyaw}}
 * Mirandese: {{t|mwl|coneilho|m}}
-* Mongolian: {{t|mn|туулай|tr=tuulaj|sc=Cyrl}}
+* Mongolian: {{t|mn|туулай|sc=Cyrl}}
 * Montagnais: {{t|moe|uapush}}
 * Nahuatl: {{t+|nah|tochtli}}
 * Navajo: {{t|nv|gah}}
@@ -182,20 +182,20 @@ From {{etyl|enm|en}} {{term|rabet|lang=enm}}, from {{etyl|frm|en}} dialect (comp
 * Swahili: {{t+|sw|sungura}}
 * Swedish: {{t+|sv|kanin|c}}
 * Tagalog: {{t+|tl|kuneho}}
-* Tajik: {{t|tg|харгӯш|tr=xargüš|sc=Cyrl}}
-* Tamil: {{t+|ta|முயல்|tr=|sc=Taml}}
+* Tajik: {{t|tg|харгӯш|sc=Cyrl}}
+* Tamil: {{t+|ta|முயல்|sc=Taml}}
 * Taos: {{t|twf|pȉwéna}}
-* Tatar: {{t|tt|йорт куяны|tr=yort quyanı|sc=Cyrl}}, {{t+|tt|куян|tr=quyan|sc=Cyrl}}
-* Telugu: {{t+|te|కుందేలు|tr=kuṅdēlu}}
+* Tatar: {{t|tt|йорт куяны|sc=Cyrl}}, {{t+|tt|куян|sc=Cyrl}}
+* Telugu: {{t+|te|కుందేలు}}
 * Thai: {{t+|th|กระต่าย|tr=kratàai}}
-* Tibetan: {{t|bo|ཡོས|tr=yos|sc=Tibt}}
+* Tibetan: {{t|bo|ཡོས|sc=Tibt}}
 * Torres Strait Creole: {{t-needed|tcs}}
 * Tswana: {{t|tn|mmutla}}
 * Turkish: {{t+|tr|ada tavşanı}}, {{t+|tr|tavşan}}
 * Turkmen: {{t|tk|towşan}}
 * Tz'utujil: {{t|tzj|umul}}
 * Tzotzil: {{t|tzo|t'ul}}
-* Ukrainian: {{t|uk|кріль|m|tr=kril’}}, {{t+|uk|кролик|m|tr=królyk}}
+* Ukrainian: {{t|uk|кріль|m}}, {{t+|uk|кролик|m|tr=królyk}}
 * Urdu: {{t|ur|خرگوش|m|tr=xargoś|sc=ur-Arab}}, {{t|ur|ششک|m|tr=śaśak|sc=ur-Arab}}
 * Uzbek: {{t|uz|quyon}}, {{t|uz|xargo'sh}}
 * Venetian: {{t|vec|cunicio|m}}
@@ -213,7 +213,7 @@ From {{etyl|enm|en}} {{term|rabet|lang=enm}}, from {{etyl|frm|en}} dialect (comp
 {{trans-top|fur}}
 * Czech: {{t+|cs|králík|m}}
 * Finnish: {{t|fi|kaniturkis}}, {{t+|fi|kani}}
-* Greek: {{t+|el|κόνικλος|m|tr=kóniklos}}
+* Greek: {{t+|el|κόνικλος|m}}
 * Italian: {{t+|it|lapin|m}}
 * Scottish Gaelic: {{t|gd|coineanach|m}}, {{t|gd|rabaid|m}}
 {{trans-mid}}
