--- a/en/m/monition.720241.wikitext
+++ b/en/m/monition.720241.wikitext
@@ -12,6 +12,8 @@ From {{etyl|xno|en}} {{term|monicion|lang=fro}}, {{etyl|frm|en}} {{term|monicion
 {{en-noun}}
 
 # A [[caution]] or [[warning]]. {{defdate|from 14th c.}}
+#* '''1890''', [[w:Henry James|Henry James]], ''The Tragic Muse'':
+#*:He cherished the usual wise '''monitions''', such as that one was not to make a fool of one's self and that one should not carry on one's technical experiments in public.
 # A legal [[notification]] of something. {{defdate|from 15th c.}}
 # A [[sign]] of impending danger; an [[omen]]. {{defdate|from 15th c.}}
 #*'''1839''', {{w|Edgar Allan Poe}}, ‘William Wilson’:
