--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -55,6 +55,7 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 # {{context|pejorative|lang=en}} a person who is obese to the extent of resembling a pig (the animal)
 # {{context|US|military|slang|lang=en}} The general-purpose M60 [[machine gun]], considered to be heavy and bulky.
 #: ''Unfortunately, the M60 is about twenty-four pounds and is very unbalanced. You try carrying the '''pig''' around the jungle and see how you feel.''
+# {{cx|uncountable|lang=en}} A simple [[dice]] [[game]] in which players roll the dice as many times as they like, either accumulating a greater score or losing previous points gained.
 
 =====Synonyms=====
 * {{sense|mammal of genus Sus}} [[hog]], [[swine]], see also [[Wikisaurus:pig]]
