t+fr:[[cependant]] ([[WT:EDIT|Assisted]]) <though#32889949>

--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -33,7 +33,7 @@ From {{etyl|enm|en}} {{term|thaugh|lang=enm}}, {{term|thagh||lang=enm}}, from {{
 * Danish: {{t+|da|dog}}
 * Dutch: {{t+|nl|echter}}
 * Finnish: {{t+|fi|kuitenkin}}
-* French: {{t+|fr|néanmoins}}
+* French: {{t+|fr|néanmoins}}, {{t+|fr|cependant}}
 * Georgian: {{t|ka|მაინც|sc=Geor}}
 * German: {{t+|de|trotzdem}}, {{t+|de|doch}}, {{t+|de|allerdings}}
 * Greek: {{t+|el|εν τούτοις|tr=én tútis}}, {{t|el|παρά ταύτα|tr=pará táfta}}, {{t+|el|ωστόσο|tr=ostóso}}
