t+niv:[[овӻоӈ]] ([[WT:EDIT|Assisted]]) <pig#32932262>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -193,6 +193,7 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * Italian: {{t+|it|maiale|m}}, {{t+|it|porco|m}}, {{t+|it|suino|m}}
 * Japanese: {{t+|ja|豚|tr=[[ぶた]], buta}}, {{t+|ja|ブタ|tr=buta|sc=Jpan}}
 * Javanese: {{t+|jv|babi}}
+* Nivkh: {{t|niv|овӻоӈ|tr=ovx̌oŋ|sc=Cyrl}}
 * Norman: {{t|nrf|couochon|m}}, {{t|nrf|bête à saie|f}}, {{t|nrf|por|m}}, {{t|nrf|gronneux|m}}, {{t|nrf|moussieu|m}}, {{t|nrf|quétot|m}}
 * Ledo Kaili: {{t-check|lew|bavu}}
 * Kannada: {{t+|kn|ಹಂದಿ|sc=Knda}}
