--- a/en/m/mini.34065.wikitext
+++ b/en/m/mini.34065.wikitext
@@ -42,10 +42,27 @@ From the prefix [[mini-]] (from Latin).
 
 ==Aromanian==
 
+===Alternative forms===
+* {{l|rup|mine}}
+
+===Etymology===
+From {{etyl|la|ro}} {{m|la|mē}}, possibly through a root ''mēne'', or through analogy with {{term|tsine|lang=ro}}, from *''quene'', from {{term|quem|lang=la}}. Compare Daco-Romanian {{term|mine|lang=ro}}, also Dalmatian {{term|main|lang=dlm}}.
+
 ===Pronoun===
 {{head|rup|pronoun}}
 
-# {{alternative form of|mine|lang=rup}}
+# [[I]]
+# [[me]]
+
+====Related terms====
+* {{l|rup|io}}/{{l|rup|iou}}
+
+====See also====
+* {{l|rup|tu}}, {{l|rup|tini}}
+* {{l|rup|el}}/{{l|rup|elu}}, {{l|rup|nãs}}
+* {{l|rup|noi}}
+* {{l|rup|voi}}
+* {{l|rup|nãsh}}, {{l|rup|elj}}
 
 ----
 
