t+pt:[[alóctone]] ([[WT:EDIT|Assisted]]) <allochthonous#32996319>

--- a/en/a/allochthonous.802822.wikitext
+++ b/en/a/allochthonous.802822.wikitext
@@ -15,6 +15,7 @@
 * Finnish: {{t+|fi|vierasperäinen}}
 {{trans-mid}}
 * French: {{t+|fr|allogène}}
+* Portuguese: {{t+|pt|alóctone}}
 * Spanish: {{t+|es|alóctono}}
 {{trans-bottom}}
 
@@ -22,6 +23,7 @@
 * Catalan: {{t+|ca|al·lòcton|m}}
 * Finnish: {{t|fi|alloktoninen}}
 {{trans-mid}}
+* Portuguese: {{t+|pt|alóctone}}
 * Spanish: {{t+|es|alóctono|m}}
 {{trans-bottom}}
 
