t+eu:[[kolpe]] ([[WT:EDIT|Assisted]]) <blow#32998080>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -478,6 +478,7 @@ From {{etyl|enm|en}} {{term|blowen|lang=enm}}, from {{etyl|ang|en}} {{m|ang|blā
 =====Translations=====
 {{trans-top|act of striking or hitting}}
 * Armenian: {{t|hy|հարված}}
+* Basque: {{t|eu|kolpe}}
 * Bulgarian: {{t+|bg|удар|m}}
 * Dutch: {{t+|nl|slag|m}}
 * Esperanto: {{t|eo|bato}}, {{t|eo|frapo}}
