t+pt:[[alogamia]] ([[WT:EDIT|Assisted]]) <allogamy#32998550>

--- a/en/a/allogamy.775548.wikitext
+++ b/en/a/allogamy.775548.wikitext
@@ -16,6 +16,7 @@
 * Bulgarian: {{t|bg|кръстосано опрашване}}
 * French: {{t+|fr|allogamie}}
 {{trans-mid}}
+* Portuguese: {{t|pt|alogamia|f}}
 * Spanish: {{t|es|alogamia|f}}
 {{trans-bottom}}
 
