t+cmn:[[{{t-needed}}]] t+ru:[[{{t-needed}}]] t-balance ([[WT:EDIT|Assisted]]) <second coming#33014355>

--- a/en/s/second coming.746616.wikitext
+++ b/en/s/second coming.746616.wikitext
@@ -16,9 +16,12 @@
 
 ====Translations====
 {{trans-top|the return of Jesus Christ}}
+* Chinese:
+*: Mandarin: {{t-needed|cmn}}
 * Finnish: {{t|fi|toinen tuleminen}}
-{{trans-mid}}
 * French: {{t+|fr|retour}}
+{{trans-mid}}
 * Greek: {{t|el|Δευτέρα Παρουσία}}
 * Portuguese: {{t|pt|segunda vinda|f}}
+* Russian: {{t-needed|ru}}
 {{trans-bottom}}
