t+sv:[[oegennytta]] ([[WT:EDIT|Assisted]]) <unselfishness#33036979>

--- a/en/u/unselfishness.742253.wikitext
+++ b/en/u/unselfishness.742253.wikitext
@@ -12,6 +12,7 @@
 {{trans-top|the state of being unselfish}}
 * Finnish: {{t|fi|epäitsekkyys}}
 {{trans-mid}}
+* Swedish: {{t|sv|oegennytta|c}}
 {{trans-bottom}}
 
 [[et:unselfishness]]
