/* Hypernyms */ <metabolic pathway#33040558>

--- a/en/m/metabolic pathway.741301.wikitext
+++ b/en/m/metabolic pathway.741301.wikitext
@@ -8,6 +8,9 @@
 ====Hypernyms====
 * {{sense|physiology}} [[metabolism]], [[anabolism]], [[catabolism]]
 
+====Hyponyms====
+* {{sense|physiology}} [[cycle]], [[synthesis]], [[interconversion]]
+
 ====Translations====
 {{trans-top|series of chemical reactions}}
 * Czech: {{t|cs|metabolická dráha|f}}
