t+pcc:[[{{t-needed}}]] ([[WT:EDIT|Assisted]]) <pig#33045016>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -301,6 +301,7 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * West Coast Bajau: {{t|bdr|menungal}}, {{t|bdr|ogok}}, {{t|bdr|bakas}}
 * West Frisian: {{t|fy|baarch|c}}
 * Wolof: {{t|wo|mbam-xuux|alt=mbam-xuux mi}}
+* Yay: {{t-needed|pcc}}
 * Yiddish: {{t|yi|חזיר|tr=khazer|m}}
 * Yup'ik: {{t|esu|sitiinkaq}}
 * Zhuang: {{t|za|mou}}
