t+tr:[[şarlatan]] ([[WT:EDIT|Assisted]]) <quack#33084969>

--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -134,6 +134,7 @@ c 1630, shortening of [[quacksalver]], from {{etyl|dum|en}} {{term|kwaksalver||l
 * Russian: {{t+|ru|шарлатан|m|tr=šarlatán}}
 * Spanish: {{t+|es|matasanos|m}}
 * Swedish: {{t+|sv|kvacksalvare|c}}
+* Turkish: {{t+|tr|şarlatan}}
 {{trans-bottom}}
 
 {{trans-top|charlatan}}
