t+tr:[[tümen]] ([[WT:EDIT|Assisted]]) <division#33085192>

--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -215,6 +215,7 @@ From {{etyl|fro|en}} {{term|division|lang=fro}}, from {{etyl|la|en}} {{term|divi
 * Swahili: {{t+|sw|farakano}}
 * Swedish: {{t+|sv|division|c}}
 * Telugu: {{t+|te|విభాగము|sc=Telu}}
+* Turkish: {{t+|tr|tümen}}
 * West Frisian: {{t|fy|divyzje|c}}
 {{trans-bottom}}
 
