t+tr:[[bölme]] t+tr:[[bölüm]] t+tr:[[pay]] t+tr:[[anlaşmazlık]] ([[WT:EDIT|Assisted]]) <division#33085198>

--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -93,6 +93,7 @@ From {{etyl|fro|en}} {{term|division|lang=fro}}, from {{etyl|la|en}} {{term|divi
 * Swahili: {{t+|sw|ugavi}}, {{t+|sw|farakano}}
 * Swedish: {{t+|sv|division|c}}
 * Telugu: {{t+|te|విభజన|sc=Telu}}
+* Turkish: {{t+|tr|bölme}}, {{t+|tr|bölüm}}
 * Urdu: {{t|ur|تقسیم|f|tr=taqsīm|sc=ur-Arab}}
 * West Frisian: {{t|fy|yndieling|c}}
 {{trans-bottom}}
@@ -118,6 +119,7 @@ From {{etyl|fro|en}} {{term|division|lang=fro}}, from {{etyl|la|en}} {{term|divi
 * Quechua: {{t|qu|t'aqa}}
 * Romanian: {{t+|ro|diviziune|f}}, {{t+|ro|parte|f}}
 * Swahili: {{t+|sw|ugavi}}, {{t+|sw|farakano}}
+* Turkish: {{t+|tr|bölüm}}, {{t+|tr|pay}}
 * West Frisian: {{t|fy|ôfdieling|c}}
 {{trans-bottom}}
 
@@ -153,6 +155,7 @@ From {{etyl|fro|en}} {{term|division|lang=fro}}, from {{etyl|la|en}} {{term|divi
 * Swahili: {{t+|sw|ugavi}}, {{t+|sw|farakano}}
 * Swedish: {{t+|sv|division|c}}
 * Telugu: {{t+|te|భాగహారము|sc=Telu}}
+* Turkish: {{t+|tr|bölme}}
 * Urdu: {{t|ur|تقسیم|f|tr=taqsīm}}
 * West Frisian: {{t|fy|dieling|c}}
 {{trans-bottom}}
@@ -180,6 +183,7 @@ From {{etyl|fro|en}} {{term|division|lang=fro}}, from {{etyl|la|en}} {{term|divi
 * Russian: {{t+|ru|деление|n|tr=delénije}}
 * Swahili: {{t+|sw|ugavi}}, {{t+|sw|farakano}}
 * Swedish: {{t+|sv|division|c}}
+* Turkish: {{t+|tr|bölme}}
 * Urdu: {{t|ur|تقسیم|f|tr=taqsīm|sc=ur-Arab}}
 * West Frisian: {{t|fy|dieling|c}}
 {{trans-bottom}}
@@ -265,6 +269,7 @@ From {{etyl|fro|en}} {{term|division|lang=fro}}, from {{etyl|la|en}} {{term|divi
 * Macedonian: {{t|mk|поделеност|f|tr=podélenost|sc=Cyrl}}
 {{trans-mid}}
 * Swahili: {{t+|sw|ugavi}}, {{t+|sw|farakano}}
+* Turkish: {{t+|tr|anlaşmazlık}}
 * West Frisian: {{t|fy|ôfstimming|c}}
 {{trans-bottom}}
 
