/* English */ Translations <amice#33087145>

--- a/en/a/amice.720080.wikitext
+++ b/en/a/amice.720080.wikitext
@@ -10,6 +10,12 @@
 
 # A [[hood]], or [[cape]] with a hood, made of or lined with grey fur, formerly worn by the [[clergy]].
 
+====Translations====
+{{trans-top|hood, or cape with a hood, formerly worn by the clergy}}
+* Portuguese: {{t|pt|amicto|m}}
+{{trans-mid}}
+{{trans-bottom}}
+
 {{Webster 1913}}
 
 ----
