--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -128,8 +128,8 @@ From {{etyl|enm|en}} {{term|rabet|lang=enm}}, from {{etyl|frm|en}} dialect (comp
 * Latin: {{t+|la|cunīculus|m}}
 * Latvian: {{t|lv|trusis}}
 * Lithuanian: {{t+|lt|triušis}}
-* Lojban: {{t+|jbo|ractu}}
 {{trans-mid}}
+* Lojban: {{t+|jbo|ractu}}
 * Low German: {{t|nds|Kanink|m|n}}, {{t|nds|Kaninken|m|n}}
 * Luxembourgish: {{t|lb|Kanéngchen}}
 * Macedonian: {{t|mk|заjак|m}}
@@ -206,7 +206,7 @@ From {{etyl|enm|en}} {{term|rabet|lang=enm}}, from {{etyl|frm|en}} dialect (comp
 * Welsh: {{t+|cy|cwningen|f}}
 * West Frisian: {{t|fy|knyn}}
 * Wolof: {{t|wo|njomboor|alt=njomboor ji}}
-* Yiddish: {{t|yi|קיניגל|n|tr=kinigl|sc=Hebr}}, {{t|yi|קראָליק|m|tr=krolik|sc=Hebr}}, {{t|yi|האָז|m|sc=Hebr}}
+* Yiddish: {{t|yi|האָז|m}}, {{t|yi|קיניגל|n}}, {{t|yi|קראָליק|m}}
 * Zazaki: {{t|zza|arwéş}}
 {{trans-bottom}}
 
