--- a/en/o/onesie.741289.wikitext
+++ b/en/o/onesie.741289.wikitext
@@ -13,14 +13,14 @@ From the Gerber Childrenswear brand name Onesies. The name became generic and wa
 {{en-noun}}
 
 # {{context|US|lang=en}} A one-piece [[garment]] for an [[infant]] or small [[child]], generally worn over a [[diaper]].
-# One-piece adult loungewear [[jumpsuit]].
+# One-piece adult [[loungewear]] [[jumpsuit]].
 # One-piece fashionable streetwear worn mostly by teenagers.
 
 ====Synonyms====
 * {{sense|a one-piece baby garment}} [[romper]], [[romper suit]]
 
 ====Translations====
-{{trans-top|a one-piece baby garment}}
+{{trans-top|baby garment}}
 * Chinese:
 *: Mandarin: {{t-needed|cmn}}
 * Dutch: {{t+|nl|romper|m}}, {{t|nl|rompertje|n}}, {{t|nl|kruippak|n}}, {{t|nl|kruippakje|n}}
@@ -29,7 +29,7 @@ From the Gerber Childrenswear brand name Onesies. The name became generic and wa
 * Russian: {{t-needed|ru}}
 {{trans-bottom}}
 
-{{trans-top|an adult loungewear jumpsuit}}
+{{trans-top|adult jumpsuit}}
 * Chinese:
 *: Mandarin: {{t-needed|cmn}}
 * Dutch: {{t+|nl|romper|m}}
