--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -191,7 +191,10 @@ From earlier {{m|en|iland}}, from {{etyl|enm|en}} {{m|enm|iland}}, {{m|enm|yland
 * Nepali: {{t|ne|द्वीप|m|tr=dvīpa|sc=Deva}}, {{t|ne|टापू|tr=ṭāpū|sc=Deva}}
 * Niuean: {{t|niu|motu}}
 * Norman: {{t|nrf|île}}
-* North Frisian: {{qualifier|Mooring}} {{t|frr|ailönj|n}}, {{qualifier|Föhr-Amrum}} {{t|frr|eilun|n}}
+* North Frisian: 
+*: Föhr-Amrum: {{t|frr|eilun|n}}
+*: Helgoland: {{t|frr|Ailun|n}}, {{t|frr|Eelun|n}}
+*: Mooring: {{t|frr|ailönj|n}}
 * Northern Thai: {{t-needed|nod}}
 * Norwegian:
 *: Bokmål: {{t+|nb|øy|m|f}}
