t+nds-de:[[wedder]] ([[WT:EDIT|Assisted]]) <again#33281820>

--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -142,7 +142,7 @@ From {{etyl|enm|en}} {{term|again|lang=enm}}, {{term|ayain|lang=enm}}, {{term|an
 * Latvian: {{t|lv|atkal}}
 * Lithuanian: {{t+|lt|vėl}}
 * Low German:
-*: German Low German: {{t|nds-de|nochmaal}}
+*: German Low German: {{t|nds-de|nochmaal}}, {{t+|nds-de|wedder}}
 * Macedonian: {{t|mk|пак|sc=Cyrl}}, {{t|mk|повторно|sc=Cyrl}}
 * Malay: {{t+|ms|lagi}}
 * Malayalam: {{t+|ml|വീണ്ടും|sc=Mlym}}
