--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -523,7 +523,8 @@ From {{etyl|enm|en}} {{term|blowen|lang=enm}}, from {{etyl|ang|en}} {{m|ang|blā
 {{trans-bottom}}
 
 ===Etymology 4===
-{{etyl|enm|en}} {{term|blowen|lang=enm}}, from {{etyl|ang|en}} {{m|ang|blōwan}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*blōaną}} (compare Dutch {{term|bloeien|lang=nl}}, German {{term|blühen|lang=de}}), from {{etyl|ine-pro|en}} {{m|ine-pro|*bhel-}} 'to thrive, bloom' (compare Latin {{m|la|florēre}} 'to bloom').
+{{PIE root|en|bʰleh₃}}
+{{etyl|enm|en}} {{term|blowen|lang=enm}}, from {{etyl|ang|en}} {{m|ang|blōwan}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*blōaną}} (compare Dutch {{term|bloeien|lang=nl}}, German {{term|blühen|lang=de}}), from {{etyl|ine-pro|en}} {{m|ine-pro|*bʰleh₃-}} (compare Latin {{m|la|florēre}} 'to bloom').
 
 ====Verb====
 {{en-verb|blows|blowing|blew|blown}}
