t+bg:[[бяло злато]] ([[WT:EDIT|Assisted]]) <white gold#33288958>

--- a/en/w/white gold.855391.wikitext
+++ b/en/w/white gold.855391.wikitext
@@ -14,6 +14,7 @@
 
 ====Translations====
 {{trans-top|A precious metal alloy consisting of gold and a platinum group metal}}
+* Bulgarian: {{t|bg|бяло злато|n|sc=Cyrl}}
 * Chinese:
 *: Mandarin: {{t+|cmn|白金|tr=báijīn|sc=Hani}}, {{t|cmn|白色黃金|sc=Hani}}, {{t|cmn|白色黄金|tr=báisè huángjīn|sc=Hani}}, {{t|cmn|白色K金|tr=báisè kei jīn|sc=Hani}}
 * Finnish: {{t|fi|valkokulta}}
