t+ar:[[رغم أن]] ([[WT:EDIT|Assisted]]) <though#33291596>

--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -81,6 +81,7 @@ From {{etyl|enm|en}} {{term|thaugh|lang=enm}}, {{term|thagh||lang=enm}}, from {{
 
 ====Translations====
 {{trans-top|although}}
+* Arabic: {{t|ar|رغم أن|tr=raḡm ʾann|sc=Arab}}
 * Czech: {{t+|cs|ačkoli}}
 * Danish: {{t+|da|dog}}
 * Dutch: {{t+|nl|hoewel}}
